"""
Ğ¨Ğ°Ğ±Ğ»Ğ¾Ğ½Ñ‹ ÑĞ¾Ğ¾Ğ±Ñ‰ĞµĞ½Ğ¸Ğ¹ Ğ´Ğ»Ñ Telegram-Ğ±Ğ¾Ñ‚Ğ° ĞŸĞ°Ğ½Ğ¸ĞºÑ‘Ñ€ 3000.
"""

from datetime import datetime
from typing import List, Optional

# Ğ˜Ğ¼Ğ¿Ğ¾Ñ€Ñ‚ Pydantic ÑÑ…ĞµĞ¼
try:
    from utils.schemas import PanicSignal
    PYDANTIC_AVAILABLE = True
except ImportError:
    PYDANTIC_AVAILABLE = False
    PanicSignal = None

def get_main_menu_template(user_name, bot_status, exchange_status,
                           last_check, alerts_enabled, last_panic_time,
                           last_panic_ticker, signals_today):
    """Ğ¨Ğ°Ğ±Ğ»Ğ¾Ğ½ Ğ³Ğ»Ğ°Ğ²Ğ½Ğ¾Ğ³Ğ¾ Ğ¼ĞµĞ½Ñ (Ğ¿Ğ¾Ğ»Ğ½Ñ‹Ğ¹)"""
    alert_status = "ğŸŸ¢ Ğ’ĞšĞ›" if alerts_enabled else "ğŸ”´ Ğ’Ğ«ĞšĞ›"

    return f"""
ğŸ¤– ĞŸĞĞĞ˜ĞšĞĞ  3000 | v1.0
ĞÑ‚Ñ€ÑĞ´ ĞºĞ¾Ğ½Ñ‚Ñ€Ğ¾Ğ»Ñ Ñ€Ñ‹Ğ½Ğ¾Ñ‡Ğ½Ğ¾Ğ¹ Ğ¿Ğ°Ğ½Ğ¸ĞºĞ¸

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
Ğ¡Ñ‚Ğ°Ñ‚ÑƒÑ: {bot_status}
Ğ‘Ğ¸Ñ€Ğ¶Ğ°: {exchange_status}
ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½ÑÑ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ°: {last_check}

ğŸ“‹ Ğ‘Ğ«Ğ¡Ğ¢Ğ Ğ«Ğ™ Ğ”ĞĞ¡Ğ¢Ğ£ĞŸ:

[ğŸ“Š ĞšĞĞ Ğ¢Ğ ĞŸĞĞĞ˜ĞšĞ˜] - Ñ‚ĞµĞ¿Ğ»Ğ¾Ğ²Ğ°Ñ ĞºĞ°Ñ€Ñ‚Ğ°
[ğŸ“Š Ğ˜ĞĞ”Ğ•ĞšĞ¡ ĞŸĞ•Ğ Ğ•Ğ“Ğ Ğ•Ğ’Ğ] - HP-Ğ±Ğ°Ñ€ Ğ°ĞºÑ†Ğ¸Ğ¸
[ğŸ“ˆ Ğ¡Ğ•Ğ“ĞĞ”ĞĞ¯Ğ¨ĞĞ˜Ğ• Ğ˜Ğ¡Ğ¢Ğ•Ğ Ğ˜ĞšĞ˜] - ÑĞ¿Ğ¸ÑĞ¾Ğº
[ğŸ“Š Ğ¡Ğ¢ĞĞ¢Ğ˜Ğ¡Ğ¢Ğ˜ĞšĞ Ğ—Ğ ĞĞ•Ğ”Ğ•Ğ›Ğ®] - Ñ‚Ğ¾Ñ‡Ğ½Ğ¾ÑÑ‚ÑŒ
[âš™ï¸ ĞĞĞ¡Ğ¢Ğ ĞĞ™ĞšĞ˜ ĞŸĞĞĞ˜ĞšĞ˜] - Ğ¿Ğ¾Ñ€Ğ¾Ğ³Ğ¸
[â“ ĞšĞĞš Ğ ĞĞ‘ĞĞ¢ĞĞ•Ğ¢] - Ğ¸Ğ½ÑÑ‚Ñ€ÑƒĞºÑ†Ğ¸Ñ

ğŸ”§ Ğ¡Ğ›Ğ£Ğ–Ğ•Ğ‘ĞĞ«Ğ• ĞšĞĞœĞĞĞ”Ğ«:

/overheat [Ğ¢Ğ˜ĞšĞ•Ğ ] -- Ğ¸Ğ½Ğ´ĞµĞºÑ Ğ¿ĞµÑ€ĞµĞ³Ñ€ĞµĞ²Ğ°
/panicmap - ĞºĞ°Ñ€Ñ‚Ğ° Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ¾ÑÑ‚Ğ¸
/today - Ğ²ÑĞµ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹ ÑĞµĞ³Ğ¾Ğ´Ğ½Ñ
/stats - ÑÑ‚Ğ°Ñ‚Ğ¸ÑÑ‚Ğ¸ĞºĞ°
/extreme - ÑĞ°Ğ¼Ñ‹Ğµ ÑĞ¸Ğ»ÑŒĞ½Ñ‹Ğµ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹
/alerts on/off - Ğ²ĞºĞ»/Ğ²Ñ‹ĞºĞ» ÑƒĞ²ĞµĞ´Ğ¾Ğ¼Ğ»ĞµĞ½Ğ¸Ñ
/startscan - Ğ²Ğ¾Ğ·Ğ¾Ğ±Ğ½Ğ¾Ğ²Ğ¸Ñ‚ÑŒ ÑĞºĞ°Ğ½Ğ¸Ñ€Ğ¾Ğ²Ğ°Ğ½Ğ¸Ğµ (Ğ¿Ğ¾ÑĞ»Ğµ ÑĞ±Ğ¾Ñ)

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
ğŸ”” ĞĞ²Ñ‚Ğ¾Ğ¾Ğ¿Ğ¾Ğ²ĞµÑ‰ĞµĞ½Ğ¸Ñ: {alert_status}
ğŸš¨ ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½ÑÑ Ğ¿Ğ°Ğ½Ğ¸ĞºĞ°: {last_panic_time} ({last_panic_ticker})
ğŸ“… Ğ¡Ğ¸Ğ³Ğ½Ğ°Ğ»Ğ¾Ğ² ÑĞµĞ³Ğ¾Ğ´Ğ½Ñ: {signals_today}
"""


def format_panic_signal_alert(signal: PanicSignal) -> str:
    """Ğ¤Ğ¾Ñ€Ğ¼Ğ°Ñ‚Ğ¸Ñ€Ğ¾Ğ²Ğ°Ğ½Ğ¸Ğµ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ğ° Ğ¿Ğ°Ğ½Ğ¸ĞºĞ¸ Ñ Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·Ğ¾Ğ²Ğ°Ğ½Ğ¸ĞµĞ¼ PanicSignal Ğ¼Ğ¾Ğ´ĞµĞ»Ğ¸"""
    if not PYDANTIC_AVAILABLE or signal is None:
        return "âš ï¸ Ğ¡Ğ¸ÑÑ‚ĞµĞ¼Ğ° Ğ²Ñ€ĞµĞ¼ĞµĞ½Ğ½Ğ¾ Ğ½ĞµĞ´Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ğ°"

    # ĞĞ¿Ñ€ĞµĞ´ĞµĞ»ÑĞµĞ¼ ÑĞ¼Ğ¾Ğ´Ğ·Ğ¸ Ğ¸ ÑƒÑ€Ğ¾Ğ²Ğ½Ğ¸
    if signal.final_level == "ğŸ”´ Ğ¡Ğ˜Ğ›Ğ¬ĞĞ«Ğ™":
        emoji = "ğŸš¨"
        level_text = "ĞšĞ ĞĞ¡ĞĞ«Ğ™ Ğ£Ğ ĞĞ’Ğ•ĞĞ¬"
    elif signal.final_level == "ğŸŸ¡ Ğ¥ĞĞ ĞĞ¨Ğ˜Ğ™":
        emoji = "âš ï¸"
        level_text = "Ğ–ĞĞ›Ğ¢Ğ«Ğ™ Ğ£Ğ ĞĞ’Ğ•ĞĞ¬"
    else:
        emoji = "â„¹ï¸"
        level_text = "Ğ‘Ğ•Ğ›Ğ«Ğ™ Ğ£Ğ ĞĞ’Ğ•ĞĞ¬"

    # ĞĞ¿Ñ€ĞµĞ´ĞµĞ»ÑĞµĞ¼ Ñ‚Ğ¸Ğ¿ Ğ¿Ğ°Ğ½Ğ¸ĞºĞ¸
    panic_type = "ĞŸĞĞĞ˜ĞšĞ" if signal.signal_type == "panic" else "Ğ–ĞĞ”ĞĞĞ¡Ğ¢Ğ¬"

    # Ğ¤Ğ¾Ñ€Ğ¼Ğ°Ñ‚Ğ¸Ñ€ÑƒĞµĞ¼ RSI Ğ·Ğ½Ğ°Ñ‡ĞµĞ½Ğ¸Ñ
    rsi_7 = signal.rsi_7 if signal.rsi_7 is not None else "N/A"
    rsi_21 = signal.rsi_21 if signal.rsi_21 is not None else "N/A"
    rsi_periods = f"{signal.rsi_14} (7Ğ´={rsi_7}, 14Ğ´={signal.rsi_14}, 21Ğ´={rsi_21})"

    # Ğ¤Ğ¾Ñ€Ğ¼Ğ°Ñ‚Ğ¸Ñ€ÑƒĞµĞ¼ Ñ„Ğ¸Ğ»ÑŒÑ‚Ñ€Ñ‹ - Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·ÑƒĞµĞ¼ Ğ¿Ğ¾Ğ»Ñ passed_filters Ğ¸ failed_filters
    passed_filters = []
    filter_emojis = {"time": "â°", "volatility": "ğŸ“Š", "trend": "ğŸ“ˆ", "spread": "ğŸ’°"}
    filter_names = {
        "time": "Ğ’Ñ€ĞµĞ¼Ñ (Ğ² Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ¾Ğ¹ Ğ·Ğ¾Ğ½Ğµ)",
        "volatility": "Ğ’Ğ¾Ğ»Ğ°Ñ‚Ğ¸Ğ»ÑŒĞ½Ğ¾ÑÑ‚ÑŒ (ATR > Ğ¿Ğ¾Ñ€Ğ¾Ğ³)",
        "trend": "Ğ¢Ñ€ĞµĞ½Ğ´ (Ñ‚Ğ¾Ñ€Ğ³ÑƒĞµÑ‚ÑÑ Ğ¿Ğ¾ Ñ‚Ñ€ĞµĞ½Ğ´Ñƒ)",
        "spread": "Ğ›Ğ¸ĞºĞ²Ğ¸Ğ´Ğ½Ğ¾ÑÑ‚ÑŒ (ÑĞ¿Ñ€ĞµĞ´ < 0.1%)"
    }

    # ĞŸÑ€Ğ¾Ğ²ĞµÑ€ÑĞµĞ¼ Ğ¿Ñ€Ğ¾Ğ¹Ğ´ĞµĞ½Ğ½Ñ‹Ğµ Ñ„Ğ¸Ğ»ÑŒÑ‚Ñ€Ñ‹
    for filter_type in signal.passed_filters:
        emoji = filter_emojis.get(filter_type, "âœ“")
        name = filter_names.get(filter_type, filter_type)
        passed_filters.append(f"{emoji} {name}")

    filters_text = "\n".join(passed_filters) if passed_filters else "âœ— ĞĞµÑ‚ Ğ¿Ñ€Ğ¾Ğ¹Ğ´ĞµĞ½Ğ½Ñ‹Ñ… Ñ„Ğ¸Ğ»ÑŒÑ‚Ñ€Ğ¾Ğ²"

    # Ğ¤Ğ¾Ñ€Ğ¼Ğ°Ñ‚Ğ¸Ñ€ÑƒĞµĞ¼ Ğ¸Ğ½Ğ´ĞµĞºÑ Ğ¿ĞµÑ€ĞµĞ³Ñ€ĞµĞ²Ğ°
    if signal.risk_metric is not None:
        health_bar = _get_health_bar(signal.risk_metric * 100)
        health_percent = int(signal.risk_metric * 100)
    else:
        health_bar = "[â–‘â–‘â–‘â–‘â–‘â–‘â–‘â–‘â–‘â–‘]"
        health_percent = 0

    return f"""
{emoji} {level_text}! Ğ’ {signal.ticker} ĞĞ‘ĞĞĞ Ğ£Ğ–Ğ•ĞĞ {panic_type}!

ğŸ“Š ĞŸĞĞ ĞĞœĞ•Ğ¢Ğ Ğ« ĞŸĞĞĞ˜ĞšĞ˜:
â€¢ RSI: {rsi_periods}
â€¢ ĞĞ±ÑŠÑ‘Ğ¼: {signal.volume_ratio:.1f}Ã— Ğ¾Ñ‚ Ğ½Ğ¾Ñ€Ğ¼Ñ‹
â€¢ Ğ’Ñ€ĞµĞ¼Ñ: {signal.timestamp.strftime('%H:%M')}
â€¢ Ğ˜Ğ½Ğ´ĞµĞºÑ Ğ¿ĞµÑ€ĞµĞ³Ñ€ĞµĞ²Ğ°: {health_bar} {health_percent}%

ğŸ¯ Ğ˜ĞĞ¢Ğ•Ğ ĞŸĞ Ğ•Ğ¢ĞĞ¦Ğ˜Ğ¯ Ğ¡Ğ˜Ğ“ĞĞĞ›Ğ:
â€¢ Ğ£Ñ€Ğ¾Ğ²ĞµĞ½ÑŒ: {signal.final_level}
â€¢ ĞŸĞ¾Ğ´Ñ‚Ğ²ĞµÑ€Ğ¶Ğ´ĞµĞ½Ğ¸Ğµ: {len(signal.passed_filters)}/4 Ñ„Ğ¸Ğ»ÑŒÑ‚Ñ€Ğ°
â€¢ ĞšĞ¾Ğ½Ñ‚ĞµĞºÑÑ‚: {signal.interpretation}
â€¢ Ğ Ğ¸ÑĞº: {signal.risk_level}

âœ… ĞŸĞ ĞĞ™Ğ”Ğ•ĞĞĞ«Ğ• Ğ¤Ğ˜Ğ›Ğ¬Ğ¢Ğ Ğ«:
{filters_text}

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
[ğŸ“Š Ğ“Ğ ĞĞ¤Ğ˜Ğš ĞĞšĞ¦Ğ˜Ğ˜] [ğŸ“ˆ Ğ¡Ğ ĞĞ’ĞĞ˜Ğ¢Ğ¬ Ğ¡ IMOEX]
[ğŸ“‹ Ğ˜Ğ¡Ğ¢ĞĞ Ğ˜Ğ¯ Ğ¡Ğ˜Ğ“ĞĞĞ›ĞĞ’] [ğŸ¤” ĞĞ‘ĞªĞ¯Ğ¡ĞĞ˜Ğ¢Ğ¬ Ğ¡Ğ˜Ğ“ĞĞĞ›]
[ğŸš« Ğ˜Ğ“ĞĞĞ Ğ˜Ğ ĞĞ’ĞĞ¢Ğ¬ {signal.ticker} ĞĞ 2 Ğ§ĞĞ¡Ğ]
"""

def get_help_template():
    """Ğ¨Ğ°Ğ±Ğ»Ğ¾Ğ½ ÑĞ¿Ñ€Ğ°Ğ²ĞºĞ¸ Ğ¿Ğ¾ ĞºĞ¾Ğ¼Ğ°Ğ½Ğ´Ğ°Ğ¼"""
    return """
ğŸ“š Ğ¡ĞŸĞ ĞĞ’ĞšĞ ĞŸĞ ĞšĞĞœĞĞĞ”ĞĞœ ĞŸĞĞĞ˜ĞšĞĞ  3000

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
ğŸ“‹ ĞĞ¡ĞĞĞ’ĞĞ«Ğ• ĞšĞĞœĞĞĞ”Ğ«:

/start - Ğ“Ğ»Ğ°Ğ²Ğ½Ğ¾Ğµ Ğ¼ĞµĞ½Ñ
/help - Ğ­Ñ‚Ğ° ÑĞ¿Ñ€Ğ°Ğ²ĞºĞ°
/status - Ğ¡Ñ‚Ğ°Ñ‚ÑƒÑ ÑĞ¸ÑÑ‚ĞµĞ¼Ñ‹

ğŸ“Š ĞĞĞĞ›Ğ˜Ğ¢Ğ˜ĞšĞ:

/overheat [Ğ¢Ğ˜ĞšĞ•Ğ ] - Ğ˜Ğ½Ğ´ĞµĞºÑ Ğ¿ĞµÑ€ĞµĞ³Ñ€ĞµĞ²Ğ° Ğ°ĞºÑ†Ğ¸Ğ¸
/panicmap - ĞšĞ°Ñ€Ñ‚Ğ° Ğ¿Ğ°Ğ½Ğ¸ĞºĞ¸ Ğ·Ğ° ÑĞµĞ³Ğ¾Ğ´Ğ½Ñ (ASCII)
/today - Ğ’ÑĞµ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹ Ğ·Ğ° ÑĞµĞ³Ğ¾Ğ´Ğ½Ñ
/stats - Ğ¡Ñ‚Ğ°Ñ‚Ğ¸ÑÑ‚Ğ¸ĞºĞ° Ğ·Ğ° Ğ½ĞµĞ´ĞµĞ»Ñ
/extreme - Ğ¡Ğ°Ğ¼Ñ‹Ğµ ÑĞ¸Ğ»ÑŒĞ½Ñ‹Ğµ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹

âš™ï¸ ĞĞĞ¡Ğ¢Ğ ĞĞ™ĞšĞ˜:

/alerts on - Ğ’ĞºĞ»ÑÑ‡Ğ¸Ñ‚ÑŒ ÑƒĞ²ĞµĞ´Ğ¾Ğ¼Ğ»ĞµĞ½Ğ¸Ñ
/alerts off - Ğ’Ñ‹ĞºĞ»ÑÑ‡Ğ¸Ñ‚ÑŒ ÑƒĞ²ĞµĞ´Ğ¾Ğ¼Ğ»ĞµĞ½Ğ¸Ñ
/settings - ĞĞ°ÑÑ‚Ñ€Ğ¾Ğ¹ĞºĞ¸ Ğ´ĞµÑ‚ĞµĞºÑ‚Ğ¾Ñ€Ğ°

ğŸ”„ Ğ£ĞŸĞ ĞĞ’Ğ›Ğ•ĞĞ˜Ğ•:

/startscan - Ğ’Ğ¾Ğ·Ğ¾Ğ±Ğ½Ğ¾Ğ²Ğ¸Ñ‚ÑŒ ÑĞºĞ°Ğ½Ğ¸Ñ€Ğ¾Ğ²Ğ°Ğ½Ğ¸Ğµ
/ignore [Ğ¢Ğ˜ĞšĞ•Ğ ] [Ğ§ĞĞ¡Ğ«] - Ğ˜Ğ³Ğ½Ğ¾Ñ€Ğ¸Ñ€Ğ¾Ğ²Ğ°Ñ‚ÑŒ Ñ‚Ğ¸ĞºĞµÑ€

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
ğŸ“± Ğ˜ĞĞ¢Ğ•Ğ ĞĞšĞ¢Ğ˜Ğ’ĞĞ«Ğ• ĞšĞĞĞŸĞšĞ˜:

ĞŸĞ¾ÑĞ»Ğµ ĞºĞ°Ğ¶Ğ´Ğ¾Ğ³Ğ¾ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ğ° Ğ´Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ñ‹ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸:
[ğŸ“Š Ğ“Ğ ĞĞ¤Ğ˜Ğš ĞĞšĞ¦Ğ˜Ğ˜] - ĞÑ‚ĞºÑ€Ñ‹Ñ‚ÑŒ Ğ³Ñ€Ğ°Ñ„Ğ¸Ğº
[ğŸ“ˆ Ğ¡Ğ ĞĞ’ĞĞ˜Ğ¢Ğ¬ Ğ¡ IMOEX] - Ğ¡Ñ€Ğ°Ğ²Ğ½Ğ¸Ñ‚ÑŒ Ñ Ğ¸Ğ½Ğ´ĞµĞºÑĞ¾Ğ¼
[ğŸ“‹ Ğ˜Ğ¡Ğ¢ĞĞ Ğ˜Ğ¯ Ğ¡Ğ˜Ğ“ĞĞĞ›ĞĞ’] - Ğ˜ÑÑ‚Ğ¾Ñ€Ğ¸Ñ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ğ¾Ğ²
[ğŸ¤” ĞĞ‘ĞªĞ¯Ğ¡ĞĞ˜Ğ¢Ğ¬ Ğ¡Ğ˜Ğ“ĞĞĞ›] - ĞŸĞ¾Ğ´Ñ€Ğ¾Ğ±Ğ½Ğ¾Ğµ Ğ¾Ğ±ÑŠÑÑĞ½ĞµĞ½Ğ¸Ğµ
[ğŸš« Ğ˜Ğ“ĞĞĞ Ğ˜Ğ ĞĞ’ĞĞ¢Ğ¬ 2 Ğ§ĞĞ¡Ğ] - Ğ’Ñ€ĞµĞ¼ĞµĞ½Ğ½Ğ¾ Ğ¸Ğ³Ğ½Ğ¾Ñ€Ğ¸Ñ€Ğ¾Ğ²Ğ°Ñ‚ÑŒ

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
â„¹ï¸ ĞŸĞ Ğ˜ĞœĞ•Ğ§ĞĞĞ˜Ğ¯:

â€¢ Ğ‘Ğ¾Ñ‚ Ñ€Ğ°Ğ±Ğ¾Ñ‚Ğ°ĞµÑ‚ Ñ‚Ğ¾Ğ»ÑŒĞºĞ¾ Ğ² Ñ‡Ğ°ÑÑ‹ Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‹ Ğ±Ğ¸Ñ€Ğ¶Ğ¸ (10:00-18:30 ĞœĞ¡Ğš)
â€¢ Ğ¡Ğ¸Ğ³Ğ½Ğ°Ğ»Ñ‹ Ğ¿Ñ€Ğ¸Ñ…Ğ¾Ğ´ÑÑ‚ Ñ‚Ğ¾Ğ»ÑŒĞºĞ¾ Ğ¿Ñ€Ğ¸ Ğ¾Ğ±Ğ½Ğ°Ñ€ÑƒĞ¶ĞµĞ½Ğ¸Ğ¸ Ğ°Ğ½Ğ¾Ğ¼Ğ°Ğ»Ğ¸Ğ¹
â€¢ ĞĞ°ÑÑ‚Ñ€Ğ¾Ğ¹ĞºĞ¸ Ğ¼Ğ¾Ğ¶Ğ½Ğ¾ Ğ¸Ğ·Ğ¼ĞµĞ½Ğ¸Ñ‚ÑŒ Ğ² Ğ²ĞµĞ±-Ğ´Ğ°ÑˆĞ±Ğ¾Ñ€Ğ´Ğµ
â€¢ Ğ”Ğ»Ñ ÑĞºÑÑ‚Ñ€ĞµĞ½Ğ½Ğ¾Ğ¹ Ğ¾ÑÑ‚Ğ°Ğ½Ğ¾Ğ²ĞºĞ¸: /stopscan

ğŸ’¬ ĞŸĞ¾Ğ´Ğ´ĞµÑ€Ğ¶ĞºĞ°: @panicker3000_support
"""


def get_health_template(ticker, health_percentage, health_bar,
                        rsi_values, volume_ratio, last_signal):
    """Ğ¨Ğ°Ğ±Ğ»Ğ¾Ğ½ Ğ¸Ğ½Ğ´ĞµĞºÑĞ° Ğ¿ĞµÑ€ĞµĞ³Ñ€ĞµĞ²Ğ° Ğ°ĞºÑ†Ğ¸Ğ¸"""
    rsi_text = ""
    if isinstance(rsi_values, dict):
        rsi_text = f"RSI: {rsi_values.get('current', 'N/A')}"
        if rsi_values.get('period7'):
            rsi_text += f" (7Ğ´={rsi_values.get('period7')}, 21Ğ´={rsi_values.get('period21', 'N/A')})"

    return f"""
ğŸ“Š Ğ˜ĞĞ”Ğ•ĞšĞ¡ ĞŸĞ•Ğ Ğ•Ğ“Ğ Ğ•Ğ’Ğ {ticker}:

Ğ¢ĞµĞºÑƒÑ‰ĞµĞµ ÑĞ¾ÑÑ‚Ğ¾ÑĞ½Ğ¸Ğµ: {health_bar} {health_percentage}%

{rsi_text}
ğŸ“ˆ ĞĞ±ÑŠÑ‘Ğ¼: {volume_ratio}Ã— Ğ¾Ñ‚ Ğ½Ğ¾Ñ€Ğ¼Ñ‹
â° ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½Ğ¸Ğ¹ ÑĞ¸Ğ³Ğ½Ğ°Ğ»: {last_signal}

ğŸ¯ Ğ˜ĞĞ¢Ğ•Ğ ĞŸĞ Ğ•Ğ¢ĞĞ¦Ğ˜Ğ¯:
{_get_health_interpretation(health_percentage)}
"""


def _get_health_interpretation(percentage):
    """Ğ’ÑĞ¿Ğ¾Ğ¼Ğ¾Ğ³Ğ°Ñ‚ĞµĞ»ÑŒĞ½Ğ°Ñ Ñ„ÑƒĞ½ĞºÑ†Ğ¸Ñ Ğ´Ğ»Ñ Ğ¸Ğ½Ñ‚ĞµÑ€Ğ¿Ñ€ĞµÑ‚Ğ°Ñ†Ğ¸Ğ¸ Ğ¸Ğ½Ğ´ĞµĞºÑĞ° Ğ¿ĞµÑ€ĞµĞ³Ñ€ĞµĞ²Ğ°"""
    if percentage < 30:
        return "ğŸŸ¢ ĞĞºÑ†Ğ¸Ñ Ğ² Ğ½Ğ¾Ñ€Ğ¼Ğµ, RSI Ğ¾ĞºĞ¾Ğ»Ğ¾ 50, Ğ¾Ğ±ÑŠÑ‘Ğ¼ ÑÑ‚Ğ°Ğ½Ğ´Ğ°Ñ€Ñ‚Ğ½Ñ‹Ğ¹"
    elif percentage < 60:
        return "ğŸŸ¡ Ğ£Ğ¼ĞµÑ€ĞµĞ½Ğ½Ğ¾Ğµ Ğ¾Ñ‚ĞºĞ»Ğ¾Ğ½ĞµĞ½Ğ¸Ğµ, Ñ‚Ñ€ĞµĞ±ÑƒĞµÑ‚ Ğ½Ğ°Ğ±Ğ»ÑĞ´ĞµĞ½Ğ¸Ñ"
    elif percentage < 80:
        return "ğŸŸ  ĞŸĞ¾Ğ²Ñ‹ÑˆĞµĞ½Ğ½Ñ‹Ğ¹ Ñ€Ğ¸ÑĞº, Ğ²Ğ¾Ğ·Ğ¼Ğ¾Ğ¶ĞµĞ½ ÑĞ¸Ğ³Ğ½Ğ°Ğ»"
    else:
        return "ğŸ”´ Ğ’Ñ‹ÑĞ¾ĞºĞ¸Ğ¹ Ñ€Ğ¸ÑĞº, ÑĞ¸Ğ»ÑŒĞ½Ğ¾Ğµ Ğ¾Ñ‚ĞºĞ»Ğ¾Ğ½ĞµĞ½Ğ¸Ğµ Ğ¾Ñ‚ Ğ½Ğ¾Ñ€Ğ¼Ñ‹"


def _get_health_bar(percentage: float) -> str:
    """Ğ¡Ğ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ğµ ASCII-ÑˆĞºĞ°Ğ»Ñ‹ Ğ¸Ğ½Ğ´ĞµĞºÑĞ° Ğ¿ĞµÑ€ĞµĞ³Ñ€ĞµĞ²Ğ°"""
    if not isinstance(percentage, (int, float)):
        return "[â–‘â–‘â–‘â–‘â–‘â–‘â–‘â–‘â–‘â–‘]"

    percentage = max(0, min(100, percentage))
    filled = int(percentage / 10)
    return "[" + "â–ˆ" * filled + "â–‘" * (10 - filled) + "]"

def get_today_template(today_signals):
    """Ğ¨Ğ°Ğ±Ğ»Ğ¾Ğ½ ÑĞµĞ³Ğ¾Ğ´Ğ½ÑÑˆĞ½Ğ¸Ñ… ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ğ¾Ğ²"""
    if not today_signals:
        return "ğŸ“… Ğ¡Ğ•Ğ“ĞĞ”ĞĞ¯Ğ¨ĞĞ˜Ğ¥ Ğ¡Ğ˜Ğ“ĞĞĞ›ĞĞ’ ĞŸĞĞšĞ ĞĞ•Ğ¢\n\nĞ¡Ğ»ĞµĞ´ÑƒÑÑ‰Ğ°Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ° Ğ² 10:00."

    signal_lines = []
    for signal in today_signals:
        # ĞŸĞ¾Ğ´Ğ´ĞµÑ€Ğ¶ĞºĞ° ĞºĞ°Ğº PanicSignal Ğ¾Ğ±ÑŠĞµĞºÑ‚Ğ¾Ğ², Ñ‚Ğ°Ğº Ğ¸ ÑĞ»Ğ¾Ğ²Ğ°Ñ€ĞµĞ¹
        if PYDANTIC_AVAILABLE and isinstance(signal, PanicSignal):
            time_str = signal.signal_time.strftime('%H:%M')
            ticker = signal.ticker
            level = signal.final_level
            rsi = signal.rsi_14
            volume = f"{signal.volume_ratio:.1f}"
        else:
            # ĞĞ±Ñ€Ğ°Ñ‚Ğ½Ğ°Ñ ÑĞ¾Ğ²Ğ¼ĞµÑÑ‚Ğ¸Ğ¼Ğ¾ÑÑ‚ÑŒ ÑĞ¾ ÑĞ»Ğ¾Ğ²Ğ°Ñ€ÑĞ¼Ğ¸
            time_str = signal.get('time', 'N/A')
            ticker = signal.get('ticker', 'N/A')
            level = signal.get('level', 'N/A')
            rsi = signal.get('rsi', 'N/A')
            volume = signal.get('volume_ratio', 'N/A')

        signal_lines.append(f"{time_str} {level} {ticker} - RSI={rsi}, ĞĞ±ÑŠÑ‘Ğ¼={volume}Ã—")

    total_count = len(today_signals)
    strong_count = sum(1 for s in today_signals if 'ğŸ”´' in s.get('level', ''))
    moderate_count = sum(1 for s in today_signals if 'ğŸŸ¡' in s.get('level', ''))
    urgent_count = sum(1 for s in today_signals if 'âšª' in s.get('level', ''))

    return f"""
ğŸ“… Ğ¡Ğ˜Ğ“ĞĞĞ›Ğ« Ğ—Ğ Ğ¡Ğ•Ğ“ĞĞ”ĞĞ¯ ({datetime.now().strftime('%d.%m.%Y')}):

{"\n".join(signal_lines)}

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
Ğ˜Ğ¢ĞĞ“Ğ: {total_count} ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ğ¾Ğ²
ğŸ”´ Ğ¡Ğ¸Ğ»ÑŒĞ½Ñ‹Ñ…: {strong_count}
ğŸŸ¡ Ğ£Ğ¼ĞµÑ€ĞµĞ½Ğ½Ñ‹Ñ…: {moderate_count}
âšª Ğ¡Ñ€Ğ¾Ñ‡Ğ½Ñ‹Ñ…: {urgent_count}
"""

def get_stats_template(stats_data):
    """Ğ¨Ğ°Ğ±Ğ»Ğ¾Ğ½ ÑÑ‚Ğ°Ñ‚Ğ¸ÑÑ‚Ğ¸ĞºĞ¸"""
    if not stats_data:
        return "ğŸ“Š ĞĞ•Ğ¢ Ğ”ĞĞĞĞ«Ğ¥ Ğ”Ğ›Ğ¯ Ğ¡Ğ¢ĞĞ¢Ğ˜Ğ¡Ğ¢Ğ˜ĞšĞ˜\n\nĞ¡Ğ¾Ğ±ĞµÑ€Ğ¸Ñ‚Ğµ Ğ´Ğ°Ğ½Ğ½Ñ‹Ğµ Ğ·Ğ° Ğ½ĞµÑĞºĞ¾Ğ»ÑŒĞºĞ¾ Ğ´Ğ½ĞµĞ¹."

    return f"""
ğŸ“Š Ğ¡Ğ¢ĞĞ¢Ğ˜Ğ¡Ğ¢Ğ˜ĞšĞ Ğ—Ğ ĞŸĞĞ¡Ğ›Ğ•Ğ”ĞĞ˜Ğ• 7 Ğ”ĞĞ•Ğ™:

Ğ’ÑĞµĞ³Ğ¾ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ğ¾Ğ²: {stats_data.get('total_signals', 0)}
ğŸ”´ Ğ¡Ğ¸Ğ»ÑŒĞ½Ñ‹Ñ…: {stats_data.get('strong_signals', 0)}
ğŸŸ¡ Ğ£Ğ¼ĞµÑ€ĞµĞ½Ğ½Ñ‹Ñ…: {stats_data.get('moderate_signals', 0)}
âšª Ğ¡Ñ€Ğ¾Ñ‡Ğ½Ñ‹Ñ…: {stats_data.get('urgent_signals', 0)}

ğŸ† Ğ¡ĞĞœĞĞ¯ ĞĞšĞ¢Ğ˜Ğ’ĞĞĞ¯: {stats_data.get('most_active_ticker', 'ĞĞ•Ğ¢')} ({stats_data.get('most_active_count', 0)})
ğŸ˜Œ Ğ¡ĞĞœĞ«Ğ™ Ğ¡ĞŸĞĞšĞĞ™ĞĞ«Ğ™: {stats_data.get('most_calm_ticker', 'ĞĞ•Ğ¢')} ({stats_data.get('most_calm_count', 0)})

ğŸ“Š ĞĞ‘Ğ©ĞĞ¯ ĞĞĞŸĞ Ğ¯Ğ–ĞĞĞĞĞ¡Ğ¢Ğ¬: {stats_data.get('market_tension', 'ĞĞ•Ğ¢ Ğ”ĞĞĞĞ«Ğ¥')}

(Ğ¿Ğ¾ ÑˆĞºĞ°Ğ»Ğµ Ğ¾Ñ‚ ğŸŸ¢ ÑĞ¿Ğ¾ĞºĞ¾Ğ¹Ğ½Ğ¾ Ğ´Ğ¾ ğŸ”´ Ğ¿Ğ°Ğ½Ğ¸ĞºĞ°)
"""


def get_extreme_template(extreme_signals):
    """Ğ¨Ğ°Ğ±Ğ»Ğ¾Ğ½ ÑĞºÑÑ‚Ñ€ĞµĞ¼Ğ°Ğ»ÑŒĞ½Ñ‹Ñ… ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ğ¾Ğ²"""
    if not extreme_signals:
        return "ğŸ“Š Ğ¡Ğ•Ğ“ĞĞ”ĞĞ¯ Ğ•Ğ©Ğ ĞĞ•Ğ¢ Ğ¡Ğ˜Ğ›Ğ¬ĞĞ«Ğ¥ Ğ¡Ğ˜Ğ“ĞĞĞ›ĞĞ’\n\nĞŸÑ€Ğ¾Ğ²ĞµÑ€ÑŒÑ‚Ğµ /today Ğ´Ğ»Ñ Ğ²ÑĞµÑ… ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ğ¾Ğ²."

    signal_lines = []
    medals = ["ğŸ¥‡", "ğŸ¥ˆ", "ğŸ¥‰"]

    for i, signal in enumerate(extreme_signals[:3]):  # Ğ¢Ğ¾Ğ»ÑŒĞºĞ¾ Ñ‚Ğ¾Ğ¿-3
        medal = medals[i] if i < len(medals) else "ğŸ“Š"

        # ĞŸĞ¾Ğ´Ğ´ĞµÑ€Ğ¶ĞºĞ° ĞºĞ°Ğº PanicSignal Ğ¾Ğ±ÑŠĞµĞºÑ‚Ğ¾Ğ², Ñ‚Ğ°Ğº Ğ¸ ÑĞ»Ğ¾Ğ²Ğ°Ñ€ĞµĞ¹
        if PYDANTIC_AVAILABLE and isinstance(signal, PanicSignal):
            ticker = signal.ticker
            level = signal.final_level
            rsi = signal.rsi_14
            volume = f"{signal.volume_ratio:.1f}"
            time_str = signal.signal_time.strftime('%H:%M')
        else:
            # ĞĞ±Ñ€Ğ°Ñ‚Ğ½Ğ°Ñ ÑĞ¾Ğ²Ğ¼ĞµÑÑ‚Ğ¸Ğ¼Ğ¾ÑÑ‚ÑŒ ÑĞ¾ ÑĞ»Ğ¾Ğ²Ğ°Ñ€ÑĞ¼Ğ¸
            ticker = signal.get('ticker', 'N/A')
            level = signal.get('level', 'N/A')
            rsi = signal.get('rsi', 'N/A')
            volume = signal.get('volume_ratio', 'N/A')
            time_str = signal.get('time', 'N/A')

        signal_lines.append(f"{medal} {time_str} {level} {ticker}")
        signal_lines.append(f"   RSI: {rsi} | ĞĞ±ÑŠÑ‘Ğ¼: {volume}Ã—")

    return f"""
ğŸ“Š Ğ¡ĞĞœĞ«Ğ• Ğ¡Ğ˜Ğ›Ğ¬ĞĞ«Ğ• Ğ¡Ğ˜Ğ“ĞĞĞ›Ğ« Ğ¡Ğ•Ğ“ĞĞ”ĞĞ¯ (Ğ¢ĞĞŸ-{min(3, len(extreme_signals))})

{"\n".join(signal_lines)}

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
ğŸ“‹ Ğ’ÑĞµ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹: /today
ğŸ“ˆ Ğ¡Ñ‚Ğ°Ñ‚Ğ¸ÑÑ‚Ğ¸ĞºĞ°: /stats
"""


def get_panic_map_template(panic_map_data):
    """Ğ¨Ğ°Ğ±Ğ»Ğ¾Ğ½ ĞºĞ°Ñ€Ñ‚Ñ‹ Ğ¿Ğ°Ğ½Ğ¸ĞºĞ¸"""
    if not panic_map_data:
        return "ğŸ“Š ĞĞ•Ğ¢ Ğ”ĞĞĞĞ«Ğ¥ Ğ”Ğ›Ğ¯ ĞšĞĞ Ğ¢Ğ« ĞŸĞĞĞ˜ĞšĞ˜"

    date_str = datetime.now().strftime('%d.%m.%Y')

    # Ğ¡Ğ¾Ğ·Ğ´Ğ°Ñ‘Ğ¼ ASCII ĞºĞ°Ñ€Ñ‚Ñƒ
    map_lines = [f"ğŸ“Š ĞšĞĞ Ğ¢Ğ ĞŸĞĞĞ˜ĞšĞ˜ Ğ—Ğ {date_str}", ""]

    # Ğ—Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²Ğ¾Ğº Ñ Ñ‡Ğ°ÑĞ°Ğ¼Ğ¸
    hours = ["10", "12", "14", "16", "18"]
    map_lines.append("    " + "  ".join(hours))

    # Ğ”Ğ°Ğ½Ğ½Ñ‹Ğµ Ğ¿Ğ¾ Ñ‚Ğ¸ĞºĞµÑ€Ğ°Ğ¼
    for ticker, signals in panic_map_data.items():
        hour_signals = []
        for hour in ["10", "12", "14", "16", "18"]:
            signal = signals.get(hour, 'âšª')
            hour_signals.append(signal)

        map_lines.append(f"{ticker:4} " + "  ".join(hour_signals))

    map_lines.append("")
    map_lines.append("âšª = Ğ½ĞµÑ‚ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ğ¾Ğ² | ğŸŸ¡ = Ñ…Ğ¾Ñ€Ğ¾ÑˆĞ¾ | ğŸ”´ = ÑĞ¸Ğ»ÑŒĞ½Ğ¾")
    map_lines.append("Ğ¡Ñ€Ğ¾Ñ‡Ğ½Ñ‹Ğµ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹ Ğ½Ğµ Ğ¿Ğ¾ĞºĞ°Ğ·Ñ‹Ğ²Ğ°ÑÑ‚ÑÑ Ğ½Ğ° ĞºĞ°Ñ€Ñ‚Ğµ")

    return "\n".join(map_lines)

def get_status_template(status_data):
    """Ğ¨Ğ°Ğ±Ğ»Ğ¾Ğ½ ÑÑ‚Ğ°Ñ‚ÑƒÑĞ° ÑĞ¸ÑÑ‚ĞµĞ¼Ñ‹"""
    return f"""
ğŸ“¡ Ğ¡Ğ¢ĞĞ¢Ğ£Ğ¡ Ğ¡Ğ˜Ğ¡Ğ¢Ğ•ĞœĞ« ĞŸĞĞĞ˜ĞšĞĞ  3000

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
ğŸ¤– Ğ‘ĞĞ¢: {status_data.get('bot_status', 'ĞĞ•Ğ¢ Ğ”ĞĞĞĞ«Ğ¥')}
ğŸ›ï¸ Ğ‘Ğ˜Ğ Ğ–Ğ: {status_data.get('exchange_status', 'ĞĞ•Ğ¢ Ğ”ĞĞĞĞ«Ğ¥')}
ğŸ• Ğ’Ğ Ğ•ĞœĞ¯: {datetime.now().strftime('%H:%M')} ĞœĞ¡Ğš
ğŸ“… Ğ”ĞĞ¢Ğ: {datetime.now().strftime('%d.%m.%Y')}

ğŸ“Š Ğ¡ĞšĞĞĞ˜Ğ ĞĞ’ĞĞĞ˜Ğ•:
â€¢ ĞĞºÑ‚Ğ¸Ğ²Ğ½Ñ‹Ñ… Ñ‚Ğ¸ĞºĞµÑ€Ğ¾Ğ²: {status_data.get('active_tickers', 0)}
â€¢ ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½ÑÑ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ°: {status_data.get('last_scan', 'ĞĞ•Ğ¢')}
â€¢ Ğ¡Ğ»ĞµĞ´ÑƒÑÑ‰Ğ°Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ°: {status_data.get('next_scan', 'ĞĞ•Ğ¢')}

ğŸ’¾ ĞŸĞĞœĞ¯Ğ¢Ğ¬:
â€¢ Ğ˜ÑĞ¿Ğ¾Ğ»ÑŒĞ·Ğ¾Ğ²Ğ°Ğ½Ğ¾: {status_data.get('memory_used', 'ĞĞ•Ğ¢')}
â€¢ Ğ¡Ğ¸Ğ³Ğ½Ğ°Ğ»Ğ¾Ğ² Ğ² Ğ‘Ğ”: {status_data.get('db_signals', 0)}

ğŸ”§ Ğ¡ĞĞ¡Ğ¢ĞĞ¯ĞĞ˜Ğ• Ğ¡Ğ•Ğ Ğ’Ğ˜Ğ¡ĞĞ’:
â€¢ gRPC ÑĞµÑ€Ğ²ĞµÑ€: {status_data.get('grpc_status', 'ĞĞ•Ğ¢')}
â€¢ Tinkoff API: {status_data.get('api_status', 'ĞĞ•Ğ¢')}
â€¢ Ğ‘Ğ°Ğ·Ğ° Ğ´Ğ°Ğ½Ğ½Ñ‹Ñ…: {status_data.get('db_status', 'ĞĞ•Ğ¢')}

â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
â„¹ï¸ Ğ”Ğ»Ñ Ğ¾Ğ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ğ¸Ñ ÑÑ‚Ğ°Ñ‚ÑƒÑĞ° Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·ÑƒĞ¹Ñ‚Ğµ /start
"""