import streamlit as st
import sys
import os
import importlib
from datetime import datetime

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ –∫–æ—Ä–Ω—é –ø—Ä–æ–µ–∫—Ç–∞
project_root = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
sys.path.insert(0, project_root)

try:
    from grpc_service.grpc_client import get_grpc_client

    GRPC_AVAILABLE = True
except ImportError as e:
    st.error(f"‚ùå –ù–µ —É–¥–∞–ª–æ—Å—å –∏–º–ø–æ—Ä—Ç–∏—Ä–æ–≤–∞—Ç—å gRPC –∫–ª–∏–µ–Ω—Ç: {e}")
    GRPC_AVAILABLE = False


# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è gRPC –∫–ª–∏–µ–Ω—Ç–∞
@st.cache_resource
def get_client():
    if GRPC_AVAILABLE:
        try:
            client = get_grpc_client()
            return client
        except Exception as e:
            st.error(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É: {e}")
            return None
    return None


grpc_client = get_client()

st.set_page_config(
    page_title="–ü–∞–Ω–∏–∫—ë—Ä 3000",
    page_icon="üö®",
    layout="wide",
    initial_sidebar_state="expanded"
)

# –ü–æ–ª—É—á–∞–µ–º —Ç–µ–∫—É—â–µ–µ –≤—Ä–µ–º—è –¥–ª—è —Å—Ç–∞—Ç—É—Å–∞
now = datetime.now()
market_open = 10 <= now.hour < 19
time_to_close = 19 - now.hour if market_open else 0

# –í–µ—Ä—Ö–Ω—è—è –ø–∞–Ω–µ–ª—å
st.markdown(f"""
<div style="background-color:#1E1E1E;padding:10px;border-radius:10px;margin-bottom:20px">
    <h1 style="color:#FF4B4B;text-align:center;margin:0">üö® –ü–ê–ù–ò–ö–Å–† 3000 | –ü–£–ù–ö–¢ –£–ü–†–ê–í–õ–ï–ù–ò–Ø –ü–ê–ù–ò–ö–û–ô</h1>
    <div style="color:#FFFFFF;text-align:center;font-size:14px">
        –í–µ—Ä—Å–∏—è: 1.0 | –ü–æ—Å–ª–µ–¥–Ω–µ–µ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ: {now.strftime('%H:%M:%S')} | –£—Ä–æ–≤–µ–Ω—å —Ç—Ä–µ–≤–æ–≥–∏: üü° –ü–û–í–´–®–ï–ù–ù–´–ô
    </div>
</div>
""", unsafe_allow_html=True)

# –ë–æ–∫–æ–≤–∞—è –ø–∞–Ω–µ–ª—å
with st.sidebar:
    st.image("https://img.icons8.com/color/96/000000/panic.png", width=100)
    st.title("–ù–∞–≤–∏–≥–∞—Ü–∏—è")

    page = st.radio(
        "–í—ã–±–µ—Ä–∏—Ç–µ —Ä–∞–∑–¥–µ–ª:",
        [
            "üö® –¢–µ–∫—É—â–∏–µ –ø–∞–Ω–∏–∫–∏",
            "üìä –ö–∞—Ä—Ç–∞ –ø–∞–Ω–∏–∫–∏",
            "üìà –ò—Å—Ç–æ—Ä–∏—è –∏—Å—Ç–µ—Ä–∏–∫",
            "üìä –ò–Ω–¥–µ–∫—Å –ø–µ—Ä–µ–≥—Ä–µ–≤–∞",
            "‚öôÔ∏è –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –¥–µ—Ç–µ–∫—Ç–æ—Ä–∞",
            "üìã –û—Ç—á—ë—Ç—ã –∏ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞",
            "‚ùì –°–ø—Ä–∞–≤–∫–∞ –∏ –æ–±—É—á–µ–Ω–∏–µ"
        ]
    )

    st.markdown("---")
    st.markdown("**–°—Ç–∞—Ç—É—Å —Å–∏—Å—Ç–µ–º—ã:**")

    status_col1, status_col2, status_col3 = st.columns(3)

    with status_col1:
        if grpc_client and GRPC_AVAILABLE:
            st.success("üü¢ gRPC –∞–∫—Ç–∏–≤–µ–Ω")
        else:
            st.error("üî¥ gRPC –æ—à–∏–±–∫–∞")

    with status_col2:
        if market_open:
            st.success(f"üü¢ –ë–∏—Ä–∂–∞ –æ—Ç–∫—Ä—ã—Ç–∞")
        else:
            st.warning("üî¥ –ë–∏—Ä–∂–∞ –∑–∞–∫—Ä—ã—Ç–∞")

    with status_col3:
        if grpc_client and GRPC_AVAILABLE and market_open:
            try:
                # –ü—ã—Ç–∞–µ–º—Å—è –ø–æ–ª—É—á–∏—Ç—å –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–∏–≥–Ω–∞–ª–æ–≤
                import yaml

                config_path = os.path.join("config", "tickers.yaml")
                with open(config_path, 'r', encoding='utf-8') as f:
                    config = yaml.safe_load(f)

                tickers = []
                for item in config.get('tickers', []):
                    if isinstance(item, dict) and 'ticker' in item:
                        tickers.append(item['ticker'])

                if tickers:
                    signals = grpc_client.scan_tickers(tickers[:3])  # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ç–æ–ª—å–∫–æ –ø–µ—Ä–≤—ã–µ 3
                    signal_count = len([s for s in signals if
                                        isinstance(s, dict) and s.get('level') not in ['‚ùå –ò–ì–ù–û–†–ò–†–û–í–ê–¢–¨', '–ù–ï–ò–ó–í–ï–°–¢–ù–û']])
                    st.info(f"üìä –°–∏–≥–Ω–∞–ª–æ–≤: {signal_count}")
                else:
                    st.info("üìä –°–∏–≥–Ω–∞–ª–æ–≤: N/A")
            except:
                st.info("üìä –°–∏–≥–Ω–∞–ª–æ–≤: N/A")
        else:
            st.info("üìä –°–∏–≥–Ω–∞–ª–æ–≤: N/A")

    st.markdown("---")

    if market_open:
        st.markdown(f"**–î–æ –∑–∞–∫—Ä—ã—Ç–∏—è:** {time_to_close}:{59 - now.minute:02d}")
    else:
        opens_at = 10 if now.hour >= 19 else 10
        st.markdown(f"**–û—Ç–∫—Ä—ã–≤–∞–µ—Ç—Å—è –≤:** {opens_at}:00")

    st.markdown("---")

    if st.button("üîÑ –û–±–Ω–æ–≤–∏—Ç—å –¥–∞–Ω–Ω—ã–µ", use_container_width=True):
        st.rerun()

# –î–∏–Ω–∞–º–∏—á–µ—Å–∫–∞—è –∑–∞–≥—Ä—É–∑–∫–∞ —Å—Ç—Ä–∞–Ω–∏—Ü
try:
    pages_dir = os.path.join(os.path.dirname(__file__), "pages")

    # –î–ª—è –æ—Å–Ω–æ–≤–Ω—ã—Ö —Å—Ç—Ä–∞–Ω–∏—Ü —Å –æ—Ç–¥–µ–ª—å–Ω—ã–º–∏ –º–æ–¥—É–ª—è–º–∏
    if page in ["üö® –¢–µ–∫—É—â–∏–µ –ø–∞–Ω–∏–∫–∏", "üìä –ö–∞—Ä—Ç–∞ –ø–∞–Ω–∏–∫–∏", "üìà –ò—Å—Ç–æ—Ä–∏—è –∏—Å—Ç–µ—Ä–∏–∫",
                "üìä –ò–Ω–¥–µ–∫—Å –ø–µ—Ä–µ–≥—Ä–µ–≤–∞", "‚öôÔ∏è –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –¥–µ—Ç–µ–∫—Ç–æ—Ä–∞"]:

        # –û–ø—Ä–µ–¥–µ–ª—è–µ–º –ø—É—Ç—å –∫ –º–æ–¥—É–ª—é
        page_map = {
            "üö® –¢–µ–∫—É—â–∏–µ –ø–∞–Ω–∏–∫–∏": "1_üö®_–¢–µ–∫—É—â–∏–µ_–ø–∞–Ω–∏–∫–∏.py",
            "üìä –ö–∞—Ä—Ç–∞ –ø–∞–Ω–∏–∫–∏": "2_üìä_–ö–∞—Ä—Ç–∞_–ø–∞–Ω–∏–∫–∏.py",
            "üìà –ò—Å—Ç–æ—Ä–∏—è –∏—Å—Ç–µ—Ä–∏–∫": "3_üìà_–ò—Å—Ç–æ—Ä–∏—è_–∏—Å—Ç–µ—Ä–∏–∫.py",
            "üìä –ò–Ω–¥–µ–∫—Å –ø–µ—Ä–µ–≥—Ä–µ–≤–∞": "4_üìä_–ò–Ω–¥–µ–∫—Å_–ø–µ—Ä–µ–≥—Ä–µ–≤–∞.py",
            "‚öôÔ∏è –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –¥–µ—Ç–µ–∫—Ç–æ—Ä–∞": "5_‚öôÔ∏è_–ù–∞—Å—Ç—Ä–æ–π–∫–∞_–¥–µ—Ç–µ–∫—Ç–æ—Ä–∞.py"
        }

        module_path = os.path.join(pages_dir, page_map[page])

        if os.path.exists(module_path):
            try:
                spec = importlib.util.spec_from_file_location("page_module", module_path)
                page_module = importlib.util.module_from_spec(spec)
                sys.modules["page_module"] = page_module
                spec.loader.exec_module(page_module)
                if hasattr(page_module, 'show'):
                    page_module.show()
                else:
                    st.error(f"‚ùå –ú–æ–¥—É–ª—å {page} –Ω–µ —Å–æ–¥–µ—Ä–∂–∏—Ç —Ñ—É–Ω–∫—Ü–∏—é 'show'")
            except Exception as e:
                st.error(f"‚ùå –û—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ —Å—Ç—Ä–∞–Ω–∏—Ü—ã {page}: {e}")
                import traceback

                st.code(traceback.format_exc())
        else:
            st.error(f"‚ùå –§–∞–π–ª {module_path} –Ω–µ –Ω–∞–π–¥–µ–Ω")

    elif page == "üìã –û—Ç—á—ë—Ç—ã –∏ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞":
        st.title("üìã –û—Ç—á—ë—Ç—ã –∏ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞")

        if grpc_client and GRPC_AVAILABLE:
            try:
                stats = grpc_client.get_stats(days=7)
                st.success(f"üìä –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ –∑–∞ 7 –¥–Ω–µ–π")

                col1, col2, col3, col4 = st.columns(4)
                with col1:
                    st.metric("–í—Å–µ–≥–æ —Å–∏–≥–Ω–∞–ª–æ–≤", stats.get('total_signals', 'N/A'))
                with col2:
                    st.metric("üî¥ –°–∏–ª—å–Ω—ã—Ö", stats.get('strong_signals', 'N/A'))
                with col3:
                    st.metric("üü° –£–º–µ—Ä–µ–Ω–Ω—ã—Ö", stats.get('moderate_signals', 'N/A'))
                with col4:
                    st.metric("‚ö™ –°—Ä–æ—á–Ω—ã—Ö", stats.get('urgent_signals', 'N/A'))

                col5, col6 = st.columns(2)
                with col5:
                    st.metric("–°–∞–º—ã–π –∞–∫—Ç–∏–≤–Ω—ã–π", f"{stats.get('most_active_ticker', 'N/A')}")
                    st.caption(f"({stats.get('most_active_count', 0)} —Å–∏–≥–Ω–∞–ª–æ–≤)")
                with col6:
                    st.metric("–°–∞–º—ã–π —Å–ø–æ–∫–æ–π–Ω—ã–π", f"{stats.get('most_calm_ticker', 'N/A')}")
                    st.caption(f"({stats.get('most_calm_count', 0)} —Å–∏–≥–Ω–∞–ª–æ–≤)")

                st.divider()
                st.subheader("üìà –ù–∞–ø—Ä—è–∂—ë–Ω–Ω–æ—Å—Ç—å —Ä—ã–Ω–∫–∞")
                tension = stats.get('market_tension', '–ù–ï–ò–ó–í–ï–°–¢–ù–û')
                if tension == 'üî¥ –í–´–°–û–ö–ê–Ø':
                    st.error(f"üî¥ {tension}")
                elif tension == 'üü° –£–ú–ï–†–ï–ù–ù–ê–Ø':
                    st.warning(f"üü° {tension}")
                elif tension == 'üü¢ –°–ü–û–ö–û–ô–ù–ê–Ø':
                    st.success(f"üü¢ {tension}")
                else:
                    st.info(f"üìä {tension}")

            except Exception as e:
                st.error(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏: {e}")
        else:
            st.warning("‚ö†Ô∏è gRPC –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω. –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ –Ω–µ–¥–æ—Å—Ç—É–ø–Ω–∞.")

    else:  # –°–ø—Ä–∞–≤–∫–∞ –∏ –æ–±—É—á–µ–Ω–∏–µ
        st.title("‚ùì –°–ø—Ä–∞–≤–∫–∞ –∏ –æ–±—É—á–µ–Ω–∏–µ")

        tab1, tab2, tab3 = st.tabs(["üìã –û–±—â–µ–µ", "ü§ñ –ë–æ—Ç", "üñ• –î–∞—à–±–æ—Ä–¥"])

        with tab1:
            st.markdown("""
                ### üéØ –ù–∞–∑–Ω–∞—á–µ–Ω–∏–µ —Å–∏—Å—Ç–µ–º—ã
                **–ü–∞–Ω–∏–∫—ë—Ä 3000** - —Å–∏—Å—Ç–µ–º–∞ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏—è —Ä—ã–Ω–æ—á–Ω—ã—Ö –∞–Ω–æ–º–∞–ª–∏–π –Ω–∞ –ú–æ—Å–±–∏—Ä–∂–µ.

                ### ‚è∞ –í—Ä–µ–º—è —Ä–∞–±–æ—Ç—ã
                - **–ë–∏—Ä–∂–∞:** 10:00-18:30 –ú–°–ö
                - **–°–∫–∞–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ:** –∫–∞–∂–¥—ã–µ 60 —Å–µ–∫—É–Ω–¥
                - **–û—Ç—á—ë—Ç:** –µ–∂–µ–¥–Ω–µ–≤–Ω–æ –≤ 18:30

                ### üöÄ –ó–∞–ø—É—Å–∫
                ```bash
                python run_scanner.py
                ```
                """)

        with tab2:
            st.markdown("""
                ### ü§ñ Telegram-–±–æ—Ç –∫–æ–º–∞–Ω–¥—ã:

                **–û—Å–Ω–æ–≤–Ω—ã–µ:**
                - `/start` - –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é
                - `/overheat [—Ç–∏–∫–µ—Ä]` - –∏–Ω–¥–µ–∫—Å –ø–µ—Ä–µ–≥—Ä–µ–≤–∞ –∞–∫—Ü–∏–∏
                - `/today` - –≤—Å–µ —Å–∏–≥–Ω–∞–ª–æ–≤ –∑–∞ —Å–µ–≥–æ–¥–Ω—è
                - `/stats` - —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ –∑–∞ –Ω–µ–¥–µ–ª—é
                - `/panicmap` - –∫–∞—Ä—Ç–∞ –ø–∞–Ω–∏–∫–∏

                **–°–ª—É–∂–µ–±–Ω—ã–µ:**
                - `/alerts on/off` - –≤–∫–ª/–≤—ã–∫–ª —É–≤–µ–¥–æ–º–ª–µ–Ω–∏—è
                - `/startscan` - –≤–æ–∑–æ–±–Ω–æ–≤–∏—Ç—å —Å–∫–∞–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ
                - `/extreme` - —Å–∞–º—ã–µ —Å–∏–ª—å–Ω—ã–µ —Å–∏–≥–Ω–∞–ª–æ–≤
                """)

        with tab3:
            st.markdown("""
                ### üñ• –î–∞—à–±–æ—Ä–¥ —Ä–∞–∑–¥–µ–ª—ã:

                **üö® –¢–µ–∫—É—â–∏–µ –ø–∞–Ω–∏–∫–∏** - –∞–∫—Ç–∏–≤–Ω—ã–µ —Å–∏–≥–Ω–∞–ª—ã –ø—Ä—è–º–æ —Å–µ–π—á–∞—Å

                **üìä –ö–∞—Ä—Ç–∞ –ø–∞–Ω–∏–∫–∏** - —Ç–µ–ø–ª–æ–≤–∞—è –∫–∞—Ä—Ç–∞ –∞–∫—Ç–∏–≤–Ω–æ—Å—Ç–∏ –∑–∞ –¥–µ–Ω—å

                **üìà –ò—Å—Ç–æ—Ä–∏—è –∏—Å—Ç–µ—Ä–∏–∫** - –∞—Ä—Ö–∏–≤ —Å–∏–≥–Ω–∞–ª–æ–≤ –ø–æ —Ç–∏–∫–µ—Ä–∞–º

                **üìä –ò–Ω–¥–µ–∫—Å –ø–µ—Ä–µ–≥—Ä–µ–≤–∞** - —Å–æ—Å—Ç–æ—è–Ω–∏–µ –≤—Å–µ—Ö –∞–∫—Ü–∏–π

                **‚öôÔ∏è –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –¥–µ—Ç–µ–∫—Ç–æ—Ä–∞** - –∫–∞—Å—Ç–æ–º–∏–∑–∞—Ü–∏—è –ø–∞—Ä–∞–º–µ—Ç—Ä–æ–≤

                **üìã –û—Ç—á—ë—Ç—ã –∏ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞** - –∞–Ω–∞–ª–∏—Ç–∏–∫–∞ –∑–∞ –Ω–µ–¥–µ–ª—é
                """)

except Exception as e:
    st.error(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –∑–∞–≥—Ä—É–∑–∫–µ —Å—Ç—Ä–∞–Ω–∏—Ü—ã: {e}")
    import traceback

    st.code(traceback.format_exc())

st.markdown("---")
st.caption(
    f"–°–∏—Å—Ç–µ–º–∞ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏—è —Ä—ã–Ω–æ—á–Ω—ã—Ö –∞–Ω–æ–º–∞–ª–∏–π | –î–∞–Ω–Ω—ã–µ –æ–±–Ω–æ–≤–ª—è—é—Ç—Å—è –≤ —Ä–µ–∞–ª—å–Ω–æ–º –≤—Ä–µ–º–µ–Ω–∏ | {now.strftime('%d.%m.%Y %H:%M:%S')}")

if not market_open:
    st.warning(f"‚ö†Ô∏è –ë–∏—Ä–∂–∞ –∑–∞–∫—Ä—ã—Ç–∞. –¢–æ—Ä–≥–æ–≤–∞—è —Å–µ—Å—Å–∏—è: 10:00-19:00 –ú–°–ö. –°–ª–µ–¥—É—é—â–µ–µ –æ—Ç–∫—Ä—ã—Ç–∏–µ –≤ 10:00.")