import streamlit as st
import sys
import os
import yaml
from datetime import datetime

sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(__file__)))))


def load_tickers():
    try:
        config_path = os.path.join("config", "tickers.yaml")
        with open(config_path, 'r', encoding='utf-8') as f:
            config = yaml.safe_load(f)

        tickers = []
        for item in config.get('tickers', []):
            if isinstance(item, dict) and 'ticker' in item:
                tickers.append(item['ticker'])
        return tickers
    except:
        return []


def show():
    st.title("üìä –ö–∞—Ä—Ç–∞ –ø–∞–Ω–∏–∫–∏")

    try:
        from grpc_service.grpc_client import get_grpc_client
        grpc_client = get_grpc_client()
        GRPC_AVAILABLE = True
    except ImportError:
        GRPC_AVAILABLE = False
        grpc_client = None

    if grpc_client and GRPC_AVAILABLE:
        try:
            tickers = load_tickers()
            today_signals = []

            for ticker in tickers:
                history = grpc_client.get_signal_history(ticker, days_back=1)
                for signal in history:
                    if isinstance(signal, dict) and signal.get('detected_at'):
                        today_signals.append(signal)

            if today_signals:
                st.success(f"üìÖ –°–∏–≥–Ω–∞–ª–æ–≤ –∑–∞ —Å–µ–≥–æ–¥–Ω—è: {len(today_signals)}")

                import pandas as pd
                df = pd.DataFrame(today_signals)
                df['hour'] = pd.to_datetime(df['detected_at']).dt.hour

                pivot = df.pivot_table(
                    index='ticker',
                    columns='hour',
                    values='level',
                    aggfunc=lambda x: x.iloc[0] if len(x) > 0 else '‚ö™',
                    fill_value='‚ö™'
                )

                st.dataframe(pivot, use_container_width=True, height=400)
                st.caption("‚ö™ = –Ω–µ—Ç —Å–∏–≥–Ω–∞–ª–æ–≤ | üü° = —É–º–µ—Ä–µ–Ω–Ω—ã–π | üî¥ = —Å–∏–ª—å–Ω—ã–π")
            else:
                st.info("üìÖ –°–µ–≥–æ–¥–Ω—è —Å–∏–≥–Ω–∞–ª–æ–≤ –Ω–µ –±—ã–ª–æ")

        except Exception as e:
            st.error(f"‚ùå –û—à–∏–±–∫–∞: {str(e)}")
    else:
        st.warning("‚ö†Ô∏è gRPC –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω")


if __name__ == "__main__":
    show()