
import streamlit as st
import pandas as pd
from datetime import datetime, timedelta
import sys
import os

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ –ø—Ä–æ–µ–∫—Ç—É
sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.abspath(__file__))))

st.set_page_config(
    page_title="–ò—Å—Ç–æ—Ä–∏—è –∏—Å—Ç–µ—Ä–∏–∫",
    page_icon="üìà",
    layout="wide"
)

st.title("üìà –ò—Å—Ç–æ—Ä–∏—è –∏—Å—Ç–µ—Ä–∏–∫")

# –ü—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏–µ –æ —Ç–µ—Å—Ç–æ–≤—ã—Ö –¥–∞–Ω–Ω—ã—Ö
st.warning("""
‚ö†Ô∏è **–í–Ω–∏–º–∞–Ω–∏–µ:** –ù–∞ —ç—Ç–æ–π —Å—Ç—Ä–∞–Ω–∏—Ü–µ –æ—Ç–æ–±—Ä–∞–∂–∞—é—Ç—Å—è –†–ï–ê–õ–¨–ù–´–ï —Å–∏–≥–Ω–∞–ª—ã –∏–∑ —Å–∏—Å—Ç–µ–º—ã.
–ï—Å–ª–∏ —Å–∏–≥–Ω–∞–ª–æ–≤ –Ω–µ—Ç - –∑–Ω–∞—á–∏—Ç —Å–∏—Å—Ç–µ–º–∞ –µ—â–µ –Ω–µ –æ–±–Ω–∞—Ä—É–∂–∏–ª–∞ –ø–∞–Ω–∏—á–µ—Å–∫–∏—Ö —Å–∏—Ç—É–∞—Ü–∏–π.
–†–∞–±–æ—Ç–∞–π—Ç–µ –≤ —á–∞—Å—ã —Ç–æ—Ä–≥–æ–≤ –Ω–∞ –ú–æ—Å–±–∏—Ä–∂–µ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –∞–∫—Ç—É–∞–ª—å–Ω—ã—Ö –¥–∞–Ω–Ω—ã—Ö.
""")

# –ü–æ–ª—É—á–∞–µ–º –¥–∞–Ω–Ω—ã–µ —á–µ—Ä–µ–∑ gRPC
try:
    from grpc_service.grpc_client import get_grpc_client

    # –°–æ–∑–¥–∞–µ–º –∫–æ–ª–æ–Ω–∫–∏ –¥–ª—è –≤—ã–±–æ—Ä–∞
    col1, col2 = st.columns(2)

    with col1:
        ticker = st.selectbox(
            "–í—ã–±–µ—Ä–∏—Ç–µ —Ç–∏–∫–µ—Ä:",
            ["SBER", "GAZP", "LKOH", "GMKN", "YNDX", "ROSN", "NVTK", "TATN", "MTSS", "ALRS"]
        )

    with col2:
        days_back = st.slider("–î–Ω–µ–π –Ω–∞–∑–∞–¥:", 1, 30, 7)

    # –ü–æ–ª—É—á–∞–µ–º –∏—Å—Ç–æ—Ä–∏—é —á–µ—Ä–µ–∑ gRPC
    if st.button("üîÑ –û–±–Ω–æ–≤–∏—Ç—å –∏—Å—Ç–æ—Ä–∏—é", type="primary"):
        with st.spinner("–ü–æ–ª—É—á–µ–Ω–∏–µ –¥–∞–Ω–Ω—ã—Ö..."):
            try:
                client = get_grpc_client()
                history = client.get_signal_history(ticker, days_back)

                if history:
                    st.success(f"üìä –ù–∞–π–¥–µ–Ω–æ {len(history)} —Å–∏–≥–Ω–∞–ª–æ–≤")

                    # –ü—Ä–µ–æ–±—Ä–∞–∑—É–µ–º –≤ DataFrame –¥–ª—è —É–¥–æ–±—Å—Ç–≤–∞
                    df_data = []
                    for signal in history:
                        df_data.append({
                            '–¢–∏–∫–µ—Ä': signal.get('ticker', ''),
                            '–î–∞—Ç–∞': signal.get('timestamp', ''),
                            '–¢–∏–ø': signal.get('signal_type', ''),
                            '–£—Ä–æ–≤–µ–Ω—å': signal.get('level', ''),
                            'RSI': signal.get('rsi_14', 0),
                            '–û–±—ä—ë–º': signal.get('volume_ratio', 0),
                            '–¶–µ–Ω–∞': signal.get('current_price', 0)
                        })

                    df = pd.DataFrame(df_data)

                    # –û—Ç–æ–±—Ä–∞–∂–∞–µ–º —Ç–∞–±–ª–∏—Ü—É
                    st.dataframe(
                        df,
                        use_container_width=True,
                        column_config={
                            "–¶–µ–Ω–∞": st.column_config.NumberColumn(format="%.2f ‚ÇΩ"),
                            "RSI": st.column_config.NumberColumn(format="%.1f"),
                            "–û–±—ä—ë–º": st.column_config.NumberColumn(format="%.1f √ó")
                        }
                    )

                    # –û—Ç–æ–±—Ä–∞–∂–∞–µ–º –∫–∞—Ä—Ç–æ—á–∫–∏
                    st.subheader("üìã –î–µ—Ç–∞–ª–∏ —Å–∏–≥–Ω–∞–ª–æ–≤")

                    for i, signal in enumerate(history, 1):
                        level = signal.get('level', '')
                        level_emoji = 'üî¥' if '–°–ò–õ–¨–ù–´–ô' in level else 'üü°' if '–•–û–†–û–®–ò–ô' in level else '‚ö™'

                        with st.container():
                            col_a, col_b, col_c, col_d = st.columns([1, 1, 1, 2])

                            with col_a:
                                st.metric(
                                    label=f"{level_emoji} {signal.get('signal_type', '–ü–ê–ù–ò–ö–ê')}",
                                    value=signal.get('ticker', '')
                                )

                            with col_b:
                                st.metric(
                                    label="RSI",
                                    value=f"{signal.get('rsi_14', 0):.1f}"
                                )

                            with col_c:
                                st.metric(
                                    label="–û–±—ä—ë–º",
                                    value=f"{signal.get('volume_ratio', 0):.1f}√ó"
                                )

                            with col_d:
                                st.metric(
                                    label="–¶–µ–Ω–∞",
                                    value=f"{signal.get('current_price', 0):.2f}‚ÇΩ"
                                )

                        st.divider()

                else:
                    st.info(f"‚ÑπÔ∏è –°–∏–≥–Ω–∞–ª–æ–≤ –¥–ª—è {ticker} –∑–∞ –ø–æ—Å–ª–µ–¥–Ω–∏–µ {days_back} –¥–Ω–µ–π –Ω–µ –Ω–∞–π–¥–µ–Ω–æ")

            except Exception as e:
                st.error(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –¥–∞–Ω–Ω—ã—Ö: {e}")

    # –ü—Ä—è–º–∞—è –ø—Ä–æ–≤–µ—Ä–∫–∞ —Ä–µ–∞–ª—å–Ω–æ–π —Ü–µ–Ω—ã
    st.divider()
    st.subheader("üîç –ü—Ä–æ–≤–µ—Ä–∫–∞ —Ç–µ–∫—É—â–µ–π —Ü–µ–Ω—ã")

    if st.button("–ü—Ä–æ–≤–µ—Ä–∏—Ç—å —Ç–µ–∫—É—â—É—é —Ü–µ–Ω—É"):
        try:
            from data.tinkoff_client import TinkoffClient
            client = TinkoffClient()
            current_price = client.get_last_price(ticker)

            if current_price:
                st.success(f"‚úÖ –¢–µ–∫—É—â–∞—è —Ü–µ–Ω–∞ {ticker}: **{current_price:.2f}‚ÇΩ**")
                if current_price < 200:
                    st.warning(f"‚ö†Ô∏è  –¶–µ–Ω–∞ –ø–æ–¥–æ–∑—Ä–∏—Ç–µ–ª—å–Ω–æ –Ω–∏–∑–∫–∞—è! –ü—Ä–æ–≤–µ—Ä—å—Ç–µ —Ä–µ–∂–∏–º —Ä–∞–±–æ—Ç—ã API.")
                else:
                    st.info(f"‚úÖ –¶–µ–Ω–∞ —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤—É–µ—Ç —Ä—ã–Ω–æ—á–Ω–æ–π (~{current_price:.2f}‚ÇΩ)")
            else:
                st.error(f"‚ùå –ù–µ —É–¥–∞–ª–æ—Å—å –ø–æ–ª—É—á–∏—Ç—å —Ü–µ–Ω—É {ticker}")

        except Exception as e:
            st.error(f"‚ùå –û—à–∏–±–∫–∞: {e}")

except ImportError as e:
    st.error(f"‚ùå –û—à–∏–±–∫–∞ –∏–º–ø–æ—Ä—Ç–∞ –º–æ–¥—É–ª–µ–π: {e}")
    st.info("""
    üîß **–†–µ—à–µ–Ω–∏–µ –ø—Ä–æ–±–ª–µ–º—ã:**
    1. –£–±–µ–¥–∏—Ç–µ—Å—å —á—Ç–æ gRPC —Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω: `python run_scanner.py`
    2. –ü—Ä–æ–≤–µ—Ä—å—Ç–µ –Ω–∞–ª–∏—á–∏–µ —Ñ–∞–π–ª–æ–≤ –≤ –ø–∞–ø–∫–µ `grpc_service/`
    3. –ü–µ—Ä–µ–∑–∞–ø—É—Å—Ç–∏—Ç–µ dashboard
    """)

# –ò–Ω—Ñ–æ—Ä–º–∞—Ü–∏—è –æ —Å–∏—Å—Ç–µ–º–µ
with st.expander("‚ÑπÔ∏è –ò–Ω—Ñ–æ—Ä–º–∞—Ü–∏—è –æ —Å–∏—Å—Ç–µ–º–µ"):
    st.write("""
    **–ò—Å—Ç–æ—Ä–∏—è –∏—Å—Ç–µ—Ä–∏–∫** - —Å—Ç—Ä–∞–Ω–∏—Ü–∞ –¥–ª—è –ø—Ä–æ—Å–º–æ—Ç—Ä–∞ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–Ω—ã—Ö —Å–∏—Å—Ç–µ–º–æ–π —Å–∏–≥–Ω–∞–ª–æ–≤ –ø–∞–Ω–∏–∫–∏/–∂–∞–¥–Ω–æ—Å—Ç–∏.

    **–ö–∞–∫ —ç—Ç–æ —Ä–∞–±–æ—Ç–∞–µ—Ç:**
    1. –°–∏—Å—Ç–µ–º–∞ –∞–Ω–∞–ª–∏–∑–∏—Ä—É–µ—Ç –¥–∞–Ω–Ω—ã–µ –≤ —Ä–µ–∞–ª—å–Ω–æ–º –≤—Ä–µ–º–µ–Ω–∏
    2. –ü—Ä–∏ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏–∏ —Å–∏–≥–Ω–∞–ª–∞ –æ–Ω —Å–æ—Ö—Ä–∞–Ω—è–µ—Ç—Å—è –≤ –±–∞–∑—É –¥–∞–Ω–Ω—ã—Ö
    3. –ù–∞ —ç—Ç–æ–π —Å—Ç—Ä–∞–Ω–∏—Ü–µ –æ—Ç–æ–±—Ä–∞–∂–∞–µ—Ç—Å—è –∏—Å—Ç–æ—Ä–∏—è —Å–æ—Ö—Ä–∞–Ω—ë–Ω–Ω—ã—Ö —Å–∏–≥–Ω–∞–ª–æ–≤

    **–ï—Å–ª–∏ —Å–∏–≥–Ω–∞–ª–æ–≤ –Ω–µ—Ç:**
    - –¢–æ—Ä–≥–∏ –Ω–∞ –±–∏—Ä–∂–µ –Ω–µ –≤–µ–¥—É—Ç—Å—è
    - –ù–µ –±—ã–ª–æ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–æ —Å–∏–≥–Ω–∞–ª–æ–≤ –ø–∞–Ω–∏–∫–∏/–∂–∞–¥–Ω–æ—Å—Ç–∏
    - –ë–∞–∑–∞ –¥–∞–Ω–Ω—ã—Ö –ø—É—Å—Ç–∞ (–ø–µ—Ä–≤—ã–π –∑–∞–ø—É—Å–∫)
    """)
