"""–ú–∏–Ω–∏–º–∞–ª—å–Ω–∞—è —Ä–µ–∞–ª–∏–∑–∞—Ü–∏—è –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö –¥–ª—è gRPC —Å–µ—Ä–≤–µ—Ä–∞"""
import sqlite3
import json
from datetime import datetime, timedelta
from typing import Optional, Dict, Any, List
import logging

try:
    from utils.schemas import PanicSignal
except ImportError as e:
    print(f"‚ö†Ô∏è  –ù–µ —É–¥–∞–ª–æ—Å—å –∏–º–ø–æ—Ä—Ç–∏—Ä–æ–≤–∞—Ç—å Pydantic –º–æ–¥–µ–ª–∏: {e}")
    PanicSignal = None

logger = logging.getLogger(__name__)


class Database:
    def __init__(self, db_path="signals.db"):
        import os
        import sqlite3

        current_dir = os.path.dirname(os.path.abspath(__file__))
        self.db_path = os.path.join(current_dir, db_path)

        os.makedirs(os.path.dirname(self.db_path), exist_ok=True)

        # –°–û–ó–î–ê–Å–ú –ü–û–î–ö–õ–Æ–ß–ï–ù–ò–ï –ö –ë–ê–ó–ï
        self.conn = sqlite3.connect(self.db_path)
        self._init_db()

    def _init_db(self):
        """–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è —Ç–∞–±–ª–∏—Ü"""
        conn = sqlite3.connect(self.db_path)
        cursor = conn.cursor()
        cursor.execute("""
            CREATE TABLE IF NOT EXISTS signals (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                ticker TEXT NOT NULL,
                timestamp TEXT NOT NULL,
                signal_type TEXT NOT NULL,
                level TEXT NOT NULL,
                rsi_14 REAL,
                volume_ratio REAL,
                price REAL,
                rsi_7 REAL,
                rsi_21 REAL,
                base_level TEXT,
                final_level TEXT,
                risk_metric REAL,
                volume_clusters TEXT,
                cluster_summary TEXT,
                passed_filters TEXT,
                created_at TEXT DEFAULT CURRENT_TIMESTAMP
            )
        """)
        conn.commit()
        conn.close()

    def get_last_signal(self, ticker):
        """–ü–æ–ª—É—á–∏—Ç—å –ø–æ—Å–ª–µ–¥–Ω–∏–π —Å–∏–≥–Ω–∞–ª –¥–ª—è —Ç–∏–∫–µ—Ä–∞"""
        conn = sqlite3.connect(self.db_path)
        cursor = conn.cursor()
        cursor.execute(
            "SELECT * FROM signals WHERE ticker = ? ORDER BY timestamp DESC LIMIT 1",
            (ticker,)
        )
        row = cursor.fetchone()
        conn.close()

        if row:
            return {
                'ticker': row[1],
                'timestamp': row[2],
                'level': row[4]
            }
        return None

    def get_stats(self, days: int = 7) -> dict:
        """–ü–æ–ª—É—á–∏—Ç—å —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É —Å–∏–≥–Ω–∞–ª–æ–≤ –∑–∞ —É–∫–∞–∑–∞–Ω–Ω–æ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ –¥–Ω–µ–π

        Args:
            days: –ö–æ–ª–∏—á–µ—Å—Ç–≤–æ –¥–Ω–µ–π –¥–ª—è –∞–Ω–∞–ª–∏–∑–∞

        Returns:
            –°–ª–æ–≤–∞—Ä—å —Å–æ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–æ–π:
            - total_signals: –≤—Å–µ–≥–æ —Å–∏–≥–Ω–∞–ª–æ–≤
            - strong_signals: –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–∏–ª—å–Ω—ã—Ö —Å–∏–≥–Ω–∞–ª–æ–≤ (üî¥)
            - moderate_signals: –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —É–º–µ—Ä–µ–Ω–Ω—ã—Ö —Å–∏–≥–Ω–∞–ª–æ–≤ (üü°)
            - urgent_signals: –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å—Ä–æ—á–Ω—ã—Ö —Å–∏–≥–Ω–∞–ª–æ–≤ (‚ö™)
            - most_active_ticker: —Å–∞–º—ã–π –∞–∫—Ç–∏–≤–Ω—ã–π —Ç–∏–∫–µ—Ä
            - most_active_count: –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–∏–≥–Ω–∞–ª–æ–≤ —É —Å–∞–º–æ–≥–æ –∞–∫—Ç–∏–≤–Ω–æ–≥–æ
            - most_calm_ticker: —Å–∞–º—ã–π —Å–ø–æ–∫–æ–π–Ω—ã–π —Ç–∏–∫–µ—Ä (—Å —Å–∏–≥–Ω–∞–ª–∞–º–∏)
            - most_calm_count: –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–∏–≥–Ω–∞–ª–æ–≤ —É —Å–∞–º–æ–≥–æ —Å–ø–æ–∫–æ–π–Ω–æ–≥–æ
        """

        conn = sqlite3.connect(self.db_path)
        cursor = conn.cursor()

        # –í—ã—á–∏—Å–ª—è–µ–º –¥–∞—Ç—É –Ω–∞—á–∞–ª–∞ –ø–µ—Ä–∏–æ–¥–∞
        start_date = (datetime.now() - timedelta(days=days)).strftime('%Y-%m-%d %H:%M:%S')

        # 1. –û–±—â–∞—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ –ø–æ —É—Ä–æ–≤–Ω—è–º
        cursor.execute("""
            SELECT 
                COUNT(*) as total_signals,
                SUM(CASE WHEN level = 'üî¥ –°–ò–õ–¨–ù–´–ô' THEN 1 ELSE 0 END) as strong_signals,
                SUM(CASE WHEN level = 'üü° –•–û–†–û–®–ò–ô' THEN 1 ELSE 0 END) as moderate_signals,
                SUM(CASE WHEN level = '‚ö™ –°–†–û–ß–ù–´–ô' THEN 1 ELSE 0 END) as urgent_signals
            FROM signals 
            WHERE timestamp >= ?
        """, (start_date,))

        stats_row = cursor.fetchone()

        # 2. –°–∞–º—ã–π –∞–∫—Ç–∏–≤–Ω—ã–π —Ç–∏–∫–µ—Ä
        cursor.execute("""
            SELECT ticker, COUNT(*) as signal_count
            FROM signals 
            WHERE timestamp >= ?
            GROUP BY ticker
            ORDER BY signal_count DESC
            LIMIT 1
        """, (start_date,))

        active_row = cursor.fetchone()

        # 3. –°–∞–º—ã–π —Å–ø–æ–∫–æ–π–Ω—ã–π —Ç–∏–∫–µ—Ä (–∏–∑ —Ç–µ—Ö, —É –∫–æ–≥–æ –µ—Å—Ç—å —Å–∏–≥–Ω–∞–ª—ã)
        cursor.execute("""
            SELECT ticker, COUNT(*) as signal_count
            FROM signals 
            WHERE timestamp >= ?
            GROUP BY ticker
            ORDER BY signal_count ASC
            LIMIT 1
        """, (start_date,))

        calm_row = cursor.fetchone()

        conn.close()

        # –§–æ—Ä–º–∏—Ä—É–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç
        result = {
            'total_signals': stats_row[0] if stats_row else 0,
            'strong_signals': stats_row[1] if stats_row else 0,
            'moderate_signals': stats_row[2] if stats_row else 0,
            'urgent_signals': stats_row[3] if stats_row else 0,
        }

        # –°–∞–º—ã–π –∞–∫—Ç–∏–≤–Ω—ã–π —Ç–∏–∫–µ—Ä
        if active_row:
            result['most_active_ticker'] = active_row[0]
            result['most_active_count'] = active_row[1]
        else:
            result['most_active_ticker'] = "–ù–ï–¢ –î–ê–ù–ù–´–•"
            result['most_active_count'] = 0

        # –°–∞–º—ã–π —Å–ø–æ–∫–æ–π–Ω—ã–π —Ç–∏–∫–µ—Ä
        if calm_row:
            result['most_calm_ticker'] = calm_row[0]
            result['most_calm_count'] = calm_row[1]
        else:
            result['most_calm_ticker'] = "–ù–ï–¢ –î–ê–ù–ù–´–•"
            result['most_calm_count'] = 0

        # 4. –û–ø—Ä–µ–¥–µ–ª—è–µ–º –æ–±—â—É—é –Ω–∞–ø—Ä—è–∂—ë–Ω–Ω–æ—Å—Ç—å —Ä—ã–Ω–∫–∞
        total = result['total_signals']
        if total == 0:
            result['market_tension'] = "üü¢ –°–ü–û–ö–û–ô–ù–û"
        elif total < 10:
            result['market_tension'] = "üü° –£–ú–ï–†–ï–ù–ù–û"
        else:
            result['market_tension'] = "üî¥ –ü–ê–ù–ò–ö–ê"

        return result

        # 5. –°—Ä–µ–¥–Ω—è—è —Ä–∏—Å–∫-–º–µ—Ç—Ä–∏–∫–∞
        cursor.execute("""
            SELECT AVG(risk_metric)
            FROM signals 
            WHERE timestamp >= ? AND risk_metric IS NOT NULL
        """, (start_date,))

        avg_risk_row = cursor.fetchone()
        avg_risk = avg_risk_row[0] if avg_risk_row and avg_risk_row[0] else 0

        # –î–æ–±–∞–≤–ª—è–µ–º —Å—Ä–µ–¥–Ω–∏–π —Ä–∏—Å–∫
        result['avg_risk_metric'] = round(avg_risk, 2)

    def get_top_signals(self, period: str = "today", limit: int = 3) -> List[dict]:
        """
        –ü–æ–ª—É—á–∏—Ç—å —Ç–æ–ø–æ–≤—ã–µ (—Å–∞–º—ã–µ —Å–∏–ª—å–Ω—ã–µ) —Å–∏–≥–Ω–∞–ª—ã –∑–∞ —É–∫–∞–∑–∞–Ω–Ω—ã–π –ø–µ—Ä–∏–æ–¥.

        Args:
            period: –ü–µ—Ä–∏–æ–¥ –≤—ã–±–æ—Ä–∫–∏ ("today", "yesterday", "week", "month")
            limit: –ú–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–∏–≥–Ω–∞–ª–æ–≤

        Returns:
            –°–ø–∏—Å–æ–∫ —Å–ª–æ–≤–∞—Ä–µ–π —Å —Ç–æ–ø–æ–≤—ã–º–∏ —Å–∏–≥–Ω–∞–ª–∞–º–∏, –æ—Ç—Å–æ—Ä—Ç–∏—Ä–æ–≤–∞–Ω–Ω—ã–º–∏ –ø–æ:
            1. –£—Ä–æ–≤–Ω—é (üî¥ > üü° > ‚ö™)
            2. –û–±—ä—ë–º–Ω–æ–º—É –∫–æ—ç—Ñ—Ñ–∏—Ü–∏–µ–Ω—Ç—É (–≤—ã—à–µ > –Ω–∏–∂–µ)
            3. –†–∏—Å–∫-–º–µ—Ç—Ä–∏–∫–µ (–≤—ã—à–µ > –Ω–∏–∂–µ)
        """
        try:
            conn = sqlite3.connect(self.db_path)
            cursor = conn.cursor()

            # –û–ø—Ä–µ–¥–µ–ª—è–µ–º –≤—Ä–µ–º–µ–Ω–Ω–æ–π –¥–∏–∞–ø–∞–∑–æ–Ω –Ω–∞ –æ—Å–Ω–æ–≤–µ –ø–µ—Ä–∏–æ–¥–∞
            end_date = datetime.now()

            if period == "today":
                start_date = end_date.replace(hour=0, minute=0, second=0, microsecond=0)
            elif period == "yesterday":
                start_date = (end_date - timedelta(days=1)).replace(hour=0, minute=0, second=0, microsecond=0)
                end_date = start_date.replace(hour=23, minute=59, second=59)
            elif period == "week":
                start_date = end_date - timedelta(days=7)
            elif period == "month":
                start_date = end_date - timedelta(days=30)
            else:
                # –ü–æ —É–º–æ–ª—á–∞–Ω–∏—é: —Å–µ–≥–æ–¥–Ω—è
                start_date = end_date.replace(hour=0, minute=0, second=0, microsecond=0)

            # –§–æ—Ä–º–∞—Ç–∏—Ä—É–µ–º –¥–∞—Ç—ã –¥–ª—è SQLite
            start_str = start_date.strftime('%Y-%m-%d %H:%M:%S')
            end_str = end_date.strftime('%Y-%m-%d %H:%M:%S')

            # –ü—Ä–∏–æ—Ä–∏—Ç–µ—Ç —É—Ä–æ–≤–Ω–µ–π –¥–ª—è —Å–æ—Ä—Ç–∏—Ä–æ–≤–∫–∏
            level_priority = {
                'üî¥ –°–ò–õ–¨–ù–´–ô': 3,
                'üü° –•–û–†–û–®–ò–ô': 2,
                '‚ö™ –°–†–û–ß–ù–´–ô': 1
            }

            # –°–Ω–∞—á–∞–ª–∞ –ø–æ–ª—É—á–∞–µ–º –≤—Å–µ —Å–∏–≥–Ω–∞–ª—ã –∑–∞ –ø–µ—Ä–∏–æ–¥
            cursor.execute("""
                SELECT ticker, timestamp, signal_type, level, rsi_14, 
                       volume_ratio, price, risk_metric
                FROM signals 
                WHERE timestamp >= ? AND timestamp <= ?
                ORDER BY timestamp DESC
            """, (start_str, end_str))

            rows = cursor.fetchall()
            conn.close()

            # –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –≤ —Å–ª–æ–≤–∞—Ä–∏
            signals = []
            for row in rows:
                signal_dict = {
                    'ticker': row[0],
                    'timestamp': row[1],
                    'signal_type': row[2],
                    'level': row[3],
                    'rsi_14': row[4],
                    'volume_ratio': row[5] or 1.0,
                    'price': row[6],
                    'risk_metric': row[7] or 0.0,
                    'level_priority': level_priority.get(row[3], 0)
                }
                signals.append(signal_dict)

            # –°–æ—Ä—Ç–∏—Ä—É–µ–º –ø–æ –ø—Ä–∏–æ—Ä–∏—Ç–µ—Ç—É
            signals.sort(key=lambda x: (
                -x['level_priority'],  # –í—ã—Å—à–∏–π —É—Ä–æ–≤–µ–Ω—å —Å–Ω–∞—á–∞–ª–∞
                -(x['volume_ratio'] or 0),  # –í—ã—Å–æ–∫–∏–π –æ–±—ä—ë–º —Å–Ω–∞—á–∞–ª–∞
                -(x['risk_metric'] or 0)  # –í—ã—Å–æ–∫–∞—è —Ä–∏—Å–∫-–º–µ—Ç—Ä–∏–∫–∞ —Å–Ω–∞—á–∞–ª–∞
            ))

            # –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ
            top_signals = signals[:limit]

            logger.info(f"üìä –ü–æ–ª—É—á–µ–Ω–æ —Ç–æ–ø-{len(top_signals)} —Å–∏–≥–Ω–∞–ª–æ–≤ –∑–∞ –ø–µ—Ä–∏–æ–¥ {period}")
            return top_signals

        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è —Ç–æ–ø —Å–∏–≥–Ω–∞–ª–æ–≤: {e}")
            return []

    def get_signal_history(self, ticker: str, days_back: int = 7, limit: int = 0) -> List[dict]:
        """–ü–æ–ª—É—á–∏—Ç—å –∏—Å—Ç–æ—Ä–∏—é —Å–∏–≥–Ω–∞–ª–æ–≤ –¥–ª—è –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–≥–æ —Ç–∏–∫–µ—Ä–∞ –∑–∞ —É–∫–∞–∑–∞–Ω–Ω—ã–π –ø–µ—Ä–∏–æ–¥

        Args:
            ticker: –°–∏–º–≤–æ–ª —Ç–∏–∫–µ—Ä–∞ (–Ω–∞–ø—Ä–∏–º–µ—Ä, 'SBER')
            days_back: –ö–æ–ª–∏—á–µ—Å—Ç–≤–æ –¥–Ω–µ–π –Ω–∞–∑–∞–¥ –¥–ª—è –≤—ã–±–æ—Ä–∫–∏

        Returns:
            –°–ø–∏—Å–æ–∫ —Å–ª–æ–≤–∞—Ä–µ–π —Å —Å–∏–≥–Ω–∞–ª–∞–º–∏
        """
        try:
            conn = sqlite3.connect(self.db_path)
            cursor = conn.cursor()

            # –í—ã—á–∏—Å–ª—è–µ–º –¥–∞—Ç—É –Ω–∞—á–∞–ª–∞ –ø–µ—Ä–∏–æ–¥–∞ –≤ —Ñ–æ—Ä–º–∞—Ç–µ SQLite
            start_date = (datetime.now() - timedelta(days=days_back)).strftime('%Y-%m-%d %H:%M:%S')

            # –ü–æ–ª—É—á–∞–µ–º –∏—Å—Ç–æ—Ä–∏—é —Å–∏–≥–Ω–∞–ª–æ–≤ –¥–ª—è —Ç–∏–∫–µ—Ä–∞
            cursor.execute("""
                SELECT ticker, timestamp, signal_type, level, 
                       rsi_14, volume_ratio, price
                FROM signals 
                WHERE ticker = ? AND timestamp >= ?
                ORDER BY timestamp DESC
            """, (ticker, start_date))

            rows = cursor.fetchall()
            conn.close()

            # –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –≤ —Å–ª–æ–≤–∞—Ä–∏
            signals = []
            for row in rows:
                signal_dict = {
                    'ticker': row[0],
                    'timestamp': row[1],
                    'signal_type': row[2],
                    'level': row[3],
                    'rsi_14': row[4],
                    'volume_ratio': row[5],
                    'price': row[6],
                    'risk_metric': None  # ‚Üê –ò–õ–ò 0.0
                }
                signals.append(signal_dict)

            logger.info(f"üìä –ü–æ–ª—É—á–µ–Ω–æ {len(signals)} —Å–∏–≥–Ω–∞–ª–æ–≤ –¥–ª—è {ticker} –∑–∞ {days_back} –¥–Ω–µ–π")
            return signals

        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –∏—Å—Ç–æ—Ä–∏–∏ —Å–∏–≥–Ω–∞–ª–æ–≤ –¥–ª—è {ticker}: {e}")
            return []

    def save_signal(self, signal_data) -> bool:
        """–°–æ—Ö—Ä–∞–Ω–∏—Ç—å –æ–±–Ω–∞—Ä—É–∂–µ–Ω–Ω—ã–π —Å–∏–≥–Ω–∞–ª –≤ –±–∞–∑—É –¥–∞–Ω–Ω—ã—Ö

        Args:
            signal_data: PanicSignal –∏–ª–∏ —Å–ª–æ–≤–∞—Ä—å —Å –¥–∞–Ω–Ω—ã–º–∏ —Å–∏–≥–Ω–∞–ª–∞
        Returns:
            True –µ—Å–ª–∏ —É—Å–ø–µ—à–Ω–æ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–æ, False –ø—Ä–∏ –æ—à–∏–±–∫–µ
        """
        try:
            # –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º PanicSignal –≤ —Å–ª–æ–≤–∞—Ä—å –µ—Å–ª–∏ –Ω—É–∂–Ω–æ
            if PanicSignal and isinstance(signal_data, PanicSignal):
                signal_dict = signal_data.dict()
            else:
                signal_dict = signal_data

            conn = sqlite3.connect(self.db_path)
            cursor = conn.cursor()

            # –ü–æ–¥–≥–æ—Ç–∞–≤–ª–∏–≤–∞–µ–º –¥–∞–Ω–Ω—ã–µ
            ticker = signal_dict.get('ticker')
            timestamp = signal_dict.get('detected_at') or signal_dict.get('timestamp')
            signal_type = signal_dict.get('signal_type')
            level = signal_dict.get('level')
            rsi_14 = signal_dict.get('rsi_14')
            volume_ratio = signal_dict.get('volume_ratio')
            price = signal_dict.get('current_price') or signal_dict.get('price')
            rsi_7 = signal_dict.get('rsi_7')
            rsi_21 = signal_dict.get('rsi_21')
            base_level = signal_dict.get('base_level')
            final_level = signal_dict.get('final_level')
            risk_metric = signal_dict.get('risk_metric')

            # –°–µ—Ä–∏–∞–ª–∏–∑—É–µ–º —Å–ª–æ–∂–Ω—ã–µ —Å—Ç—Ä—É–∫—Ç—É—Ä—ã –≤ JSON
            volume_clusters = json.dumps(signal_dict.get('volume_clusters', [])) if signal_dict.get(
                'volume_clusters') else None
            cluster_summary = signal_dict.get('cluster_summary')
            passed_filters = json.dumps(signal_dict.get('passed_filters', {})) if signal_dict.get(
                'passed_filters') else None

            cursor.execute("""
                INSERT INTO signals 
                (ticker, timestamp, signal_type, level, rsi_14, volume_ratio, price,
                 rsi_7, rsi_21, base_level, final_level, risk_metric, 
                 volume_clusters, cluster_summary, passed_filters)
                VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
            """, (
                ticker,
                timestamp,
                signal_type,
                level,
                rsi_14,
                volume_ratio,
                price,
                rsi_7,
                rsi_21,
                base_level,
                final_level,
                risk_metric,
                volume_clusters,
                cluster_summary,
                passed_filters
            ))

            conn.commit()
            conn.close()

            logger.info(f"‚úÖ –°–∏–≥–Ω–∞–ª —Å–æ—Ö—Ä–∞–Ω—ë–Ω –≤ –ë–î: {ticker} ({level})")
            return True

        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è —Å–∏–≥–Ω–∞–ª–∞ –≤ –ë–î: {e}")
            return False

    def get_panic_signals(self, days: int = 1, limit: int = 10) -> List[PanicSignal]:
        """–ü–æ–ª—É—á–∏—Ç—å —Å–ø–∏—Å–æ–∫ —Å–∏–≥–Ω–∞–ª–æ–≤ –∫–∞–∫ PanicSignal –º–æ–¥–µ–ª–∏

        Args:
            days: –ö–æ–ª–∏—á–µ—Å—Ç–≤–æ –¥–Ω–µ–π –Ω–∞–∑–∞–¥
            limit: –ú–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–∏–≥–Ω–∞–ª–æ–≤

        Returns:
            –°–ø–∏—Å–æ–∫ PanicSignal –æ–±—ä–µ–∫—Ç–æ–≤
        """
        try:
            if not PanicSignal:
                logger.warning("Pydantic –º–æ–¥–µ–ª–∏ –Ω–µ –∑–∞–≥—Ä—É–∂–µ–Ω—ã")
                return []

            start_date = (datetime.now() - timedelta(days=days)).strftime('%Y-%m-%d %H:%M:%S')

            conn = sqlite3.connect(self.db_path)
            cursor = conn.cursor()

            cursor.execute("""
                SELECT ticker, timestamp as detected_at, signal_type, level,
                       rsi_14, volume_ratio, price as current_price,
                       rsi_7, rsi_21, base_level, final_level, risk_metric,
                       volume_clusters, cluster_summary, passed_filters
                FROM signals 
                WHERE timestamp >= ?
                ORDER BY timestamp DESC
                LIMIT ?
            """, (start_date, limit))

            rows = cursor.fetchall()
            conn.close()

            signals = []
            for row in rows:
                try:
                    signal_dict = {
                        'ticker': row[0],
                        'detected_at': row[1],
                        'signal_type': row[2],
                        'level': row[3],
                        'rsi_14': row[4],
                        'volume_ratio': row[5],
                        'current_price': row[6],
                        'rsi_7': row[7],
                        'rsi_21': row[8],
                        'base_level': row[9],
                        'final_level': row[10],
                        'risk_metric': row[11],
                        'volume_clusters': json.loads(row[12]) if row[12] else [],
                        'cluster_summary': row[13],
                        'passed_filters': json.loads(row[14]) if row[14] else {}
                    }

                    # –°–æ–∑–¥–∞—ë–º PanicSignal
                    signal = PanicSignal(**signal_dict)
                    signals.append(signal)

                except Exception as e:
                    logger.warning(f"–ù–µ —É–¥–∞–ª–æ—Å—å —Å–æ–∑–¥–∞—Ç—å PanicSignal –∏–∑ —Å—Ç—Ä–æ–∫–∏ –ë–î: {e}")
                    continue

            return signals

        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è PanicSignal –∏–∑ –ë–î: {e}")
            return []

