# panicker3000/utils/schemas.py
"""
Pydantic —Å—Ö–µ–º—ã –¥–ª—è –≤–∞–ª–∏–¥–∞—Ü–∏–∏ –¥–∞–Ω–Ω—ã—Ö –≤ –ø—Ä–æ–µ–∫—Ç–µ –ü–∞–Ω–∏–∫—ë—Ä 3000.

–ò—Å–ø–æ–ª—å–∑—É—é—Ç—Å—è –¥–ª—è:
1. –í–∞–ª–∏–¥–∞—Ü–∏–∏ —Å–∏–≥–Ω–∞–ª–æ–≤
2. –ü—Ä–æ–≤–µ—Ä–∫–∏ –¥–∞–Ω–Ω—ã—Ö –æ—Ç Tinkoff API
3. –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ gRPC
4. –û–±–µ—Å–ø–µ—á–µ–Ω–∏—è —Ç–∏–ø–∏–∑–∞—Ü–∏–∏ –º–µ–∂–¥—É –º–æ–¥—É–ª—è–º–∏
"""

# ============================================================================
# –ò–ú–ü–û–†–¢–´
# ============================================================================
from datetime import datetime
from typing import Dict, List, Optional, Any, Tuple
from enum import Enum
from pydantic import BaseModel, Field, validator, root_validator
import logging

logger = logging.getLogger(__name__)


# ============================================================================
# ENUM –î–õ–Ø –¢–ò–ü–û–í –°–ò–ì–ù–ê–õ–û–í
# ============================================================================
class SignalType(str, Enum):
    """–¢–∏–ø —Å–∏–≥–Ω–∞–ª–∞"""
    PANIC = "panic"  # –ü–µ—Ä–µ–ø—Ä–æ–¥–∞–Ω–Ω–æ—Å—Ç—å (–ø–æ–∫—É–ø–∫–∞)
    GREED = "greed"  # –ü–µ—Ä–µ–∫—É–ø–ª–µ–Ω–Ω–æ—Å—Ç—å (–ø—Ä–æ–¥–∞–∂–∞)


class BaseLevel(str, Enum):
    """–ë–∞–∑–æ–≤—ã–π —É—Ä–æ–≤–µ–Ω—å —Å–∏–≥–Ω–∞–ª–∞ (–ø–æ—Å–ª–µ —à–∞–≥–∞ 5)"""
    STRONG = "strong"  # –°–∏–ª—å–Ω—ã–π (–≤—Å–µ 3 –ø–µ—Ä–∏–æ–¥–∞ –ø–æ–¥—Ç–≤–µ—Ä–∂–¥–∞—é—Ç)
    GOOD = "good"  # –•–æ—Ä–æ—à–∏–π (2 –ø–µ—Ä–∏–æ–¥–∞ –ø–æ–¥—Ç–≤–µ—Ä–∂–¥–∞—é—Ç)
    URGENT = "urgent"  # –°—Ä–æ—á–Ω—ã–π (—Ç–æ–ª—å–∫–æ RSI14)
    NONE = "none"  # –ù–µ—Ç —Å–∏–≥–Ω–∞–ª–∞


class FinalLevel(str, Enum):
    """–§–∏–Ω–∞–ª—å–Ω—ã–π —É—Ä–æ–≤–µ–Ω—å —Å–∏–≥–Ω–∞–ª–∞ (–ø–æ—Å–ª–µ —Ñ–∏–ª—å—Ç—Ä–æ–≤)"""
    RED = "red"  # üî¥ –°–∏–ª—å–Ω—ã–π - –¥–ª—è –Ω–µ–º–µ–¥–ª–µ–Ω–Ω–æ–≥–æ —Ä–∞—Å—Å–º–æ—Ç—Ä–µ–Ω–∏—è
    YELLOW = "yellow"  # üü° –•–æ—Ä–æ—à–∏–π - –¥–ª—è –ø—Ä–∏—Å—Ç–∞–ª—å–Ω–æ–≥–æ –≤–Ω–∏–º–∞–Ω–∏—è
    WHITE = "white"  # ‚ö™ –°—Ä–æ—á–Ω—ã–π - —Ä–∞–Ω–Ω–µ–µ –ø—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏–µ
    IGNORE = "ignore"  # ‚ùå –ò–≥–Ω–æ—Ä–∏—Ä–æ–≤–∞—Ç—å


# ============================================================================
# –°–•–ï–ú–ê: –ö–õ–ê–°–¢–ï–† –û–ë–™–Å–ú–ê (–®–ê–ì 9)
# ============================================================================
class VolumeCluster(BaseModel):
    """–ö–ª–∞—Å—Ç–µ—Ä –æ–±—ä—ë–º–∞ –¥–ª—è —à–∞–≥–∞ 9 –∞–ª–≥–æ—Ä–∏—Ç–º–∞"""

    price_level: float = Field(..., description="–¶–µ–Ω–æ–≤–æ–π —É—Ä–æ–≤–µ–Ω—å –∫–ª–∞—Å—Ç–µ—Ä–∞")
    volume_percentage: float = Field(
        ...,
        ge=0.0,
        le=100.0,
        description="–î–æ–ª—è –æ–±—ä—ë–º–∞ –Ω–∞ —ç—Ç–æ–º —É—Ä–æ–≤–Ω–µ (0-100%)"
    )
    volume_amount: Optional[float] = Field(
        None,
        description="–ê–±—Å–æ–ª—é—Ç–Ω–æ–µ –∑–Ω–∞—á–µ–Ω–∏–µ –æ–±—ä—ë–º–∞"
    )
    role: str = Field(
        "neutral",
        description="–†–æ–ª—å —É—Ä–æ–≤–Ω—è: support/resistance/neutral"
    )

    @validator('role')
    def validate_role(cls, v):
        allowed_roles = ['support', 'resistance', 'neutral']
        if v not in allowed_roles:
            raise ValueError(f"–†–æ–ª—å –¥–æ–ª–∂–Ω–∞ –±—ã—Ç—å –æ–¥–Ω–æ–π –∏–∑: {allowed_roles}")
        return v

    class Config:
        """–ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è Pydantic"""
        schema_extra = {
            "example": {
                "price_level": 310.50,
                "volume_percentage": 45.2,
                "volume_amount": 150000000.0,
                "role": "support"
            }
        }


# ============================================================================
# –°–•–ï–ú–ê: –†–ò–°–ö-–ú–ï–¢–†–ò–ö–ò (–®–ê–ì 10)
# ============================================================================
class RiskMetrics(BaseModel):
    """–†–∏—Å–∫-–º–µ—Ç—Ä–∏–∫–∏ –¥–ª—è —à–∞–≥–∞ 10 –∞–ª–≥–æ—Ä–∏—Ç–º–∞"""

    risk_score: float = Field(
        ...,
        ge=0.0,
        le=100.0,
        description="–û–±—â–∞—è –æ—Ü–µ–Ω–∫–∞ —Ä–∏—Å–∫–∞ (0-100)"
    )
    rsi_component: float = Field(
        ...,
        description="–í–∫–ª–∞–¥ RSI –≤ —Ä–∏—Å–∫"
    )
    volume_component: float = Field(
        ...,
        description="–í–∫–ª–∞–¥ –æ–±—ä—ë–º–∞ –≤ —Ä–∏—Å–∫"
    )
    atr_component: Optional[float] = Field(
        None,
        description="–í–∫–ª–∞–¥ –≤–æ–ª–∞—Ç–∏–ª—å–Ω–æ—Å—Ç–∏ (ATR) –≤ —Ä–∏—Å–∫"
    )
    interpretation: str = Field(
        ...,
        description="–¢–µ–∫—Å—Ç–æ–≤–æ–µ –æ–ø–∏—Å–∞–Ω–∏–µ —Ä–∏—Å–∫–∞"
    )

    @validator('risk_score')
    def validate_risk_score(cls, v):
        if v < 0 or v > 100:
            raise ValueError("risk_score –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –≤ –¥–∏–∞–ø–∞–∑–æ–Ω–µ 0-100")
        return v

    class Config:
        schema_extra = {
            "example": {
                "risk_score": 65.5,
                "rsi_component": 0.7,
                "volume_component": 0.8,
                "atr_component": 0.6,
                "interpretation": "–í—ã—Å–æ–∫–∏–π —Ä–∏—Å–∫: —Å–∏–ª—å–Ω–∞—è –ø–µ—Ä–µ–∫—É–ø–ª–µ–Ω–Ω–æ—Å—Ç—å + –∞–Ω–æ–º–∞–ª—å–Ω—ã–π –æ–±—ä—ë–º"
            }
        }


# ============================================================================
# –û–°–ù–û–í–ù–ê–Ø –°–•–ï–ú–ê: –°–ò–ì–ù–ê–õ –ü–ê–ù–ò–ö–ò (–ó–ê–ú–ï–ù–ê dataclass)
# ============================================================================
class PanicSignal(BaseModel):
    """
    –ü–æ–ª–Ω–∞—è —Å—Ö–µ–º–∞ —Å–∏–≥–Ω–∞–ª–∞ –ø–∞–Ω–∏–∫–∏/–∂–∞–¥–Ω–æ—Å—Ç–∏
    –ó–∞–º–µ–Ω—è–µ—Ç dataclass PanicSignal –∏–∑ panic_detector.py
    """

    # –û—Å–Ω–æ–≤–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ
    ticker: str = Field(..., description="–¢–∏–∫–µ—Ä –∞–∫—Ü–∏–∏ (SBER, GAZP –∏ —Ç.–¥.)")
    timestamp: datetime = Field(
        default_factory=datetime.now,
        description="–í—Ä–µ–º—è –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏—è —Å–∏–≥–Ω–∞–ª–∞"
    )
    signal_type: SignalType = Field(
        ...,
        description="–¢–∏–ø —Å–∏–≥–Ω–∞–ª–∞: –ø–∞–Ω–∏–∫–∞ –∏–ª–∏ –∂–∞–¥–Ω–æ—Å—Ç—å"
    )

    # –ü–∞—Ä–∞–º–µ—Ç—Ä—ã RSI
    rsi_7: Optional[float] = Field(
        None,
        ge=0.0,
        le=100.0,
        description="RSI –∑–∞ 7 –¥–Ω–µ–π"
    )
    rsi_14: float = Field(
        ...,
        ge=0.0,
        le=100.0,
        description="RSI –∑–∞ 14 –¥–Ω–µ–π (–æ—Å–Ω–æ–≤–Ω–æ–π)"
    )
    rsi_21: Optional[float] = Field(
        None,
        ge=0.0,
        le=100.0,
        description="RSI –∑–∞ 21 –¥–Ω–µ–π"
    )

    # –û–±—ä—ë–º
    volume_ratio: float = Field(
        ...,
        gt=0.0,
        description="–ö–æ—ç—Ñ—Ñ–∏—Ü–∏–µ–Ω—Ç –æ–±—ä—ë–º–∞ (—Ç–µ–∫—É—â–∏–π/—Å—Ä–µ–¥–Ω–∏–π)"
    )
    current_volume: Optional[float] = Field(
        None,
        gt=0.0,
        description="–¢–µ–∫—É—â–∏–π –æ–±—ä—ë–º"
    )
    average_volume: Optional[float] = Field(
        None,
        gt=0.0,
        description="–°—Ä–µ–¥–Ω–∏–π –¥–Ω–µ–≤–Ω–æ–π –æ–±—ä—ë–º"
    )

    # –£—Ä–æ–≤–Ω–∏
    base_level: BaseLevel = Field(..., description="–ë–∞–∑–æ–≤—ã–π —É—Ä–æ–≤–µ–Ω—å –ø–æ—Å–ª–µ —à–∞–≥–∞ 5")
    final_level: FinalLevel = Field(..., description="–§–∏–Ω–∞–ª—å–Ω—ã–π —É—Ä–æ–≤–µ–Ω—å –ø–æ—Å–ª–µ —Ñ–∏–ª—å—Ç—Ä–æ–≤")

    # –§–∏–ª—å—Ç—Ä—ã
    passed_filters: List[str] = Field(
        default_factory=list,
        description="–°–ø–∏—Å–æ–∫ –ø—Ä–æ–π–¥–µ–Ω–Ω—ã—Ö —Ñ–∏–ª—å—Ç—Ä–æ–≤"
    )
    failed_filters: List[str] = Field(
        default_factory=list,
        description="–°–ø–∏—Å–æ–∫ –Ω–µ–ø—Ä–æ–π–¥–µ–Ω–Ω—ã—Ö —Ñ–∏–ª—å—Ç—Ä–æ–≤"
    )

    # –ö–æ–Ω—Ç–µ–∫—Å—Ç
    price: Optional[float] = Field(None, gt=0.0, description="–¢–µ–∫—É—â–∞—è —Ü–µ–Ω–∞")
    atr: Optional[float] = Field(None, gt=0.0, description="Average True Range")
    sma_20: Optional[float] = Field(None, description="–ü—Ä–æ—Å—Ç–∞—è —Å–∫–æ–ª—å–∑—è—â–∞—è —Å—Ä–µ–¥–Ω—è—è –∑–∞ 20 –¥–Ω–µ–π")
    spread_percent: float = Field(
        default=0.1,
        ge=0.0,
        description="–°–ø—Ä–µ–¥ –≤ –ø—Ä–æ—Ü–µ–Ω—Ç–∞—Ö (bid-ask spread)"
    )

    # –®–∞–≥ 9: –ö–ª–∞—Å—Ç–µ—Ä—ã –æ–±—ä—ë–º–∞
    volume_clusters: List[VolumeCluster] = Field(
        default_factory=list,
        description="–°–ø–∏—Å–æ–∫ –∫–ª–∞—Å—Ç–µ—Ä–æ–≤ –æ–±—ä—ë–º–∞"
    )
    cluster_summary: str = Field(
        default="",
        description="–¢–µ–∫—Å—Ç–æ–≤–æ–µ –æ–ø–∏—Å–∞–Ω–∏–µ –∫–ª–∞—Å—Ç–µ—Ä–æ–≤"
    )

    # –®–∞–≥ 10: –†–∏—Å–∫-–º–µ—Ç—Ä–∏–∫–∏
    risk_metric: Optional[float] = Field(
        None,
        ge=0.0,
        le=100.0,
        description="–ß–∏—Å–ª–æ–≤–∞—è –æ—Ü–µ–Ω–∫–∞ —Ä–∏—Å–∫–∞ (0-100)"
    )
    risk_interpretation: str = Field(
        default="",
        description="–¢–µ–∫—Å—Ç–æ–≤–æ–µ –æ–ø–∏—Å–∞–Ω–∏–µ —Ä–∏—Å–∫–∞"
    )

    # –°–æ–æ–±—â–µ–Ω–∏—è
    interpretation: str = Field(
        ...,
        description="–ò–Ω—Ç–µ—Ä–ø—Ä–µ—Ç–∞—Ü–∏—è —Å–∏–≥–Ω–∞–ª–∞ –¥–ª—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è"
    )
    recommendation: str = Field(
        ...,
        description="–†–µ–∫–æ–º–µ–Ω–¥–∞—Ü–∏—è –ø–æ –¥–µ–π—Å—Ç–≤–∏—é"
    )
    risk_level: str = Field(
        ...,
        description="–£—Ä–æ–≤–µ–Ω—å —Ä–∏—Å–∫–∞ (—Ç–µ–∫—Å—Ç–æ–≤—ã–π)"
    )

    # –í–∞–ª–∏–¥–∞—Ç–æ—Ä—ã
    @validator('rsi_14')
    def validate_rsi_14(cls, v):
        if v < 0 or v > 100:
            raise ValueError("RSI –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –≤ –¥–∏–∞–ø–∞–∑–æ–Ω–µ 0-100")
        return v

    @validator('volume_ratio')
    def validate_volume_ratio(cls, v):
        if v <= 0:
            raise ValueError("–ö–æ—ç—Ñ—Ñ–∏—Ü–∏–µ–Ω—Ç –æ–±—ä—ë–º–∞ –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –ø–æ–ª–æ–∂–∏—Ç–µ–ª—å–Ω—ã–º")
        return v

    @root_validator
    def validate_signal_consistency(cls, values):
        """–ü—Ä–æ–≤–µ—Ä–∫–∞ —Å–æ–≥–ª–∞—Å–æ–≤–∞–Ω–Ω–æ—Å—Ç–∏ –¥–∞–Ω–Ω—ã—Ö —Å–∏–≥–Ω–∞–ª–∞"""
        signal_type = values.get('signal_type')
        rsi_14 = values.get('rsi_14')

        if signal_type and rsi_14:
            if signal_type == SignalType.PANIC and rsi_14 > 50:
                logger.warning(f"PANIC —Å–∏–≥–Ω–∞–ª —Å RSI={rsi_14} > 50")
            elif signal_type == SignalType.GREED and rsi_14 < 50:
                logger.warning(f"GREED —Å–∏–≥–Ω–∞–ª —Å RSI={rsi_14} < 50")

        return values

    # –ú–µ—Ç–æ–¥—ã
    def get_rsi_tuple(self) -> Tuple[Optional[float], float, Optional[float]]:
        """–ü–æ–ª—É—á–∏—Ç—å RSI –∑–Ω–∞—á–µ–Ω–∏—è –∫–∞–∫ –∫–æ—Ä—Ç–µ–∂"""
        return (self.rsi_7, self.rsi_14, self.rsi_21)

    def get_emoji_for_level(self) -> str:
        """–ü–æ–ª—É—á–∏—Ç—å —ç–º–æ–¥–∑–∏ –¥–ª—è —É—Ä–æ–≤–Ω—è —Å–∏–≥–Ω–∞–ª–∞"""
        emoji_map = {
            FinalLevel.RED: "üî¥",
            FinalLevel.YELLOW: "üü°",
            FinalLevel.WHITE: "‚ö™",
            FinalLevel.IGNORE: "‚ùå"
        }
        return emoji_map.get(self.final_level, "‚ö™")

    def to_dict(self) -> Dict[str, Any]:
        """–ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä–æ–≤–∞—Ç—å –≤ —Å–ª–æ–≤–∞—Ä—å (—Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç—å —Å–æ —Å—Ç–∞—Ä—ã–º –∫–æ–¥–æ–º)"""
        result = self.dict()
        result['timestamp'] = self.timestamp.isoformat()
        return result

    class Config:
        """–ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è Pydantic –¥–ª—è PanicSignal"""
        use_enum_values = True  # –°–æ—Ö—Ä–∞–Ω—è—Ç—å enum –∫–∞–∫ –∑–Ω–∞—á–µ–Ω–∏—è
        json_encoders = {
            datetime: lambda v: v.isoformat(),
            Enum: lambda v: v.value
        }
        schema_extra = {
            "example": {
                "ticker": "SBER",
                "timestamp": "2024-01-15T14:30:00",
                "signal_type": "panic",
                "rsi_7": 22.5,
                "rsi_14": 24.0,
                "rsi_21": 26.0,
                "volume_ratio": 2.3,
                "current_volume": 450000000.0,
                "average_volume": 195000000.0,
                "base_level": "strong",
                "final_level": "red",
                "passed_filters": ["volatility", "trend"],
                "failed_filters": ["volume"],
                "price": 310.50,
                "atr": 1.8,
                "sma_20": 305.0,
                "spread_percent": 0.05,
                "interpretation": "–°–∏–ª—å–Ω–∞—è –ø–∞–Ω–∏–∫–∞, –∞–∫—Ü–∏—è –ø–µ—Ä–µ–ø—Ä–æ–¥–∞–Ω–∞",
                "recommendation": "–†–∞—Å—Å–º–æ—Ç—Ä–µ—Ç—å –∫–æ–Ω—Ç—Ä—Ç—Ä–µ–Ω–¥–æ–≤—É—é –ø–æ–∫—É–ø–∫—É",
                "risk_level": "–í—ã—Å–æ–∫–∏–π"
            }
        }


# ============================================================================
# –°–•–ï–ú–ê: –î–ê–ù–ù–´–ï –¢–ò–ö–ï–†–ê
# ============================================================================
class TickerData(BaseModel):
    """–î–∞–Ω–Ω—ã–µ –ø–æ —Ç–∏–∫–µ—Ä—É –¥–ª—è –∞–Ω–∞–ª–∏–∑–∞"""

    ticker: str = Field(..., description="–¢–∏–∫–µ—Ä –∞–∫—Ü–∏–∏")
    price: Optional[float] = Field(None, description="–¢–µ–∫—É—â–∞—è —Ü–µ–Ω–∞")
    rsi_7: Optional[float] = Field(None, description="RSI –∑–∞ 7 –¥–Ω–µ–π")
    rsi_14: Optional[float] = Field(None, description="RSI –∑–∞ 14 –¥–Ω–µ–π")
    rsi_21: Optional[float] = Field(None, description="RSI –∑–∞ 21 –¥–Ω–µ–π")
    volume_ratio: float = Field(1.0, description="–ö–æ—ç—Ñ—Ñ–∏—Ü–∏–µ–Ω—Ç –æ–±—ä—ë–º–∞")
    current_volume: Optional[float] = Field(None, description="–¢–µ–∫—É—â–∏–π –æ–±—ä—ë–º")
    average_volume: Optional[float] = Field(None, description="–°—Ä–µ–¥–Ω–∏–π –æ–±—ä—ë–º")
    atr: Optional[float] = Field(None, description="Average True Range")
    sma_20: Optional[float] = Field(None, description="SMA –∑–∞ 20 –¥–Ω–µ–π")
    spread_percent: float = Field(0.1, description="–°–ø—Ä–µ–¥")

    # –î–ª—è —à–∞–≥–∞ 9: –∏—Å—Ç–æ—Ä–∏—á–µ—Å–∫–∏–µ –¥–∞–Ω–Ω—ã–µ –¥–ª—è –∞–Ω–∞–ª–∏–∑–∞ –∫–ª–∞—Å—Ç–µ—Ä–æ–≤
    historical_prices: List[float] = Field(
        default_factory=list,
        description="–ò—Å—Ç–æ—Ä–∏—á–µ—Å–∫–∏–µ —Ü–µ–Ω—ã –∑–∞ –¥–µ–Ω—å"
    )
    historical_volumes: List[float] = Field(
        default_factory=list,
        description="–ò—Å—Ç–æ—Ä–∏—á–µ—Å–∫–∏–µ –æ–±—ä—ë–º—ã –∑–∞ –¥–µ–Ω—å"
    )

    # –ú–µ—Ç–æ–¥—ã
    def has_required_data(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä–∫–∞ –Ω–∞–ª–∏—á–∏—è –º–∏–Ω–∏–º–∞–ª—å–Ω–æ –Ω–µ–æ–±—Ö–æ–¥–∏–º—ã—Ö –¥–∞–Ω–Ω—ã—Ö"""
        required = ['ticker', 'rsi_14', 'volume_ratio', 'price']
        return all(getattr(self, field) is not None for field in required)

    def validate_for_analysis(self) -> Tuple[bool, str]:
        """–í–∞–ª–∏–¥–∞—Ü–∏—è –¥–∞–Ω–Ω—ã—Ö –¥–ª—è –∞–Ω–∞–ª–∏–∑–∞"""
        if not self.ticker:
            return False, "–ù–µ—Ç —Ç–∏–∫–µ—Ä–∞"
        if self.rsi_14 is None:
            return False, "–ù–µ—Ç RSI14"
        if self.volume_ratio is None:
            return False, "–ù–µ—Ç –∫–æ—ç—Ñ—Ñ–∏—Ü–∏–µ–Ω—Ç–∞ –æ–±—ä—ë–º–∞"
        if self.price is None:
            return False, "–ù–µ—Ç —Ç–µ–∫—É—â–µ–π —Ü–µ–Ω—ã"
        return True, "–î–∞–Ω–Ω—ã–µ –≤–∞–ª–∏–¥–Ω—ã"

    class Config:
        schema_extra = {
            "example": {
                "ticker": "SBER",
                "price": 310.50,
                "rsi_7": 22.5,
                "rsi_14": 24.0,
                "rsi_21": 26.0,
                "volume_ratio": 2.3,
                "current_volume": 450000000.0,
                "average_volume": 195000000.0,
                "atr": 1.8,
                "sma_20": 305.0,
                "spread_percent": 0.05,
                "historical_prices": [310.0, 309.5, 310.2, 310.5],
                "historical_volumes": [1000000, 1500000, 1200000, 1800000]
            }
        }


# ============================================================================
# –°–•–ï–ú–ê: –ó–ê–ü–†–û–° –ù–ê –°–ö–ê–ù–ò–†–û–í–ê–ù–ò–ï
# ============================================================================
class ScanRequest(BaseModel):
    """–ó–∞–ø—Ä–æ—Å –Ω–∞ —Å–∫–∞–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ —Ç–∏–∫–µ—Ä–∞"""

    ticker: str = Field(..., description="–¢–∏–∫–µ—Ä –¥–ª—è —Å–∫–∞–Ω–∏—Ä–æ–≤–∞–Ω–∏—è")
    include_clusters: bool = Field(
        True,
        description="–í–∫–ª—é—á–∞—Ç—å –ª–∏ –∞–Ω–∞–ª–∏–∑ –∫–ª–∞—Å—Ç–µ—Ä–æ–≤ –æ–±—ä—ë–º–∞"
    )
    include_risk: bool = Field(
        True,
        description="–í–∫–ª—é—á–∞—Ç—å –ª–∏ —Ä–∞—Å—á—ë—Ç —Ä–∏—Å–∫-–º–µ—Ç—Ä–∏–∫"
    )

    class Config:
        schema_extra = {
            "example": {
                "ticker": "SBER",
                "include_clusters": True,
                "include_risk": True
            }
        }


class ScanResponse(BaseModel):
    """–û—Ç–≤–µ—Ç –Ω–∞ –∑–∞–ø—Ä–æ—Å —Å–∫–∞–Ω–∏—Ä–æ–≤–∞–Ω–∏—è"""

    success: bool = Field(..., description="–£—Å–ø–µ—à–Ω–æ –ª–∏ –≤—ã–ø–æ–ª–Ω–µ–Ω–æ —Å–∫–∞–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ")
    signal: Optional[PanicSignal] = Field(
        None,
        description="–û–±–Ω–∞—Ä—É–∂–µ–Ω–Ω—ã–π —Å–∏–≥–Ω–∞–ª (–µ—Å–ª–∏ –µ—Å—Ç—å)"
    )
    error_message: Optional[str] = Field(
        None,
        description="–°–æ–æ–±—â–µ–Ω–∏–µ –æ–± –æ—à–∏–±–∫–µ (–µ—Å–ª–∏ success=False)"
    )
    processing_time_ms: float = Field(
        ...,
        description="–í—Ä–µ–º—è –æ–±—Ä–∞–±–æ—Ç–∫–∏ –≤ –º–∏–ª–ª–∏—Å–µ–∫—É–Ω–¥–∞—Ö"
    )

    class Config:
        schema_extra = {
            "example": {
                "success": True,
                "signal": {...},  # –ó–¥–µ—Å—å –±—É–¥–µ—Ç PanicSignal
                "error_message": None,
                "processing_time_ms": 125.5
            }
        }


# ============================================================================
# –°–•–ï–ú–ê: –ö–û–ù–§–ò–ì–£–†–ê–¶–ò–Ø
# ============================================================================
class ThresholdConfig(BaseModel):
    """–ü–æ—Ä–æ–≥–æ–≤—ã–µ –∑–Ω–∞—á–µ–Ω–∏—è –¥–ª—è —É—Ä–æ–≤–Ω–µ–π —Å–∏–≥–Ω–∞–ª–∞"""

    rsi_buy: float = Field(..., ge=0.0, le=100.0, description="RSI –¥–ª—è –ø–æ–∫—É–ø–∫–∏")
    rsi_sell: float = Field(..., ge=0.0, le=100.0, description="RSI –¥–ª—è –ø—Ä–æ–¥–∞–∂–∏")
    volume_min: float = Field(..., gt=0.0, description="–ú–∏–Ω–∏–º–∞–ª—å–Ω—ã–π –∫–æ—ç—Ñ—Ñ–∏—Ü–∏–µ–Ω—Ç –æ–±—ä—ë–º–∞")


class PanicThresholds(BaseModel):
    """–í—Å–µ –ø–æ—Ä–æ–≥–∏ –¥–ª—è –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏—è –ø–∞–Ω–∏–∫–∏"""

    red: ThresholdConfig
    yellow: ThresholdConfig
    white: ThresholdConfig

    @validator('red', 'yellow', 'white')
    def validate_thresholds(cls, v, values, field):
        """–ü—Ä–æ–≤–µ—Ä–∫–∞, —á—Ç–æ RSI –¥–ª—è –ø–æ–∫—É–ø–∫–∏ < RSI –¥–ª—è –ø—Ä–æ–¥–∞–∂–∏"""
        if v.rsi_buy >= v.rsi_sell:
            raise ValueError(f"{field.name}: rsi_buy –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –º–µ–Ω—å—à–µ rsi_sell")
        return v

    class Config:
        schema_extra = {
            "example": {
                "red": {
                    "rsi_buy": 25,
                    "rsi_sell": 75,
                    "volume_min": 2.0
                },
                "yellow": {
                    "rsi_buy": 30,
                    "rsi_sell": 70,
                    "volume_min": 1.5
                },
                "white": {
                    "rsi_buy": 35,
                    "rsi_sell": 65,
                    "volume_min": 1.2
                }
            }
        }


# ============================================================================
# –°–•–ï–ú–ê: –°–¢–ê–¢–ò–°–¢–ò–ö–ê
# ============================================================================
class DailyStats(BaseModel):
    """–°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ –∑–∞ –¥–µ–Ω—å"""

    date: str = Field(..., description="–î–∞—Ç–∞ –≤ —Ñ–æ—Ä–º–∞—Ç–µ YYYY-MM-DD")
    total_signals: int = Field(0, ge=0, description="–í—Å–µ–≥–æ —Å–∏–≥–Ω–∞–ª–æ–≤")
    strong_signals: int = Field(0, ge=0, description="–°–∏–ª—å–Ω—ã—Ö —Å–∏–≥–Ω–∞–ª–æ–≤")
    moderate_signals: int = Field(0, ge=0, description="–£–º–µ—Ä–µ–Ω–Ω—ã—Ö —Å–∏–≥–Ω–∞–ª–æ–≤")
    urgent_signals: int = Field(0, ge=0, description="–°—Ä–æ—á–Ω—ã—Ö —Å–∏–≥–Ω–∞–ª–æ–≤")
    most_active_ticker: str = Field("", description="–°–∞–º—ã–π –∞–∫—Ç–∏–≤–Ω—ã–π —Ç–∏–∫–µ—Ä")
    most_active_count: int = Field(0, ge=0, description="–ö–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–∏–≥–Ω–∞–ª–æ–≤ —É —Å–∞–º–æ–≥–æ –∞–∫—Ç–∏–≤–Ω–æ–≥–æ")
    most_calm_ticker: str = Field("", description="–°–∞–º—ã–π —Å–ø–æ–∫–æ–π–Ω—ã–π —Ç–∏–∫–µ—Ä")
    most_calm_count: int = Field(0, ge=0, description="–ö–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–∏–≥–Ω–∞–ª–æ–≤ —É —Å–∞–º–æ–≥–æ —Å–ø–æ–∫–æ–π–Ω–æ–≥–æ")
    market_tension: str = Field("", description="–ù–∞–ø—Ä—è–∂—ë–Ω–Ω–æ—Å—Ç—å —Ä—ã–Ω–∫–∞")

    class Config:
        schema_extra = {
            "example": {
                "date": "2024-01-15",
                "total_signals": 24,
                "strong_signals": 5,
                "moderate_signals": 12,
                "urgent_signals": 7,
                "most_active_ticker": "SBER",
                "most_active_count": 8,
                "most_calm_ticker": "GMKN",
                "most_calm_count": 1,
                "market_tension": "üü° –£–ú–ï–†–ï–ù–ù–ê–Ø"
            }
        }


# ============================================================================
# –≠–ö–°–ü–û–†–¢–ò–†–£–ï–ú–´–ï –§–£–ù–ö–¶–ò–ò
# ============================================================================
def validate_panic_signal(data: Dict[str, Any]) -> Tuple[bool, Optional[PanicSignal], str]:
    """
    –í–∞–ª–∏–¥–∞—Ü–∏—è –¥–∞–Ω–Ω—ã—Ö —Å–∏–≥–Ω–∞–ª–∞

    Args:
        data: –°–ª–æ–≤–∞—Ä—å —Å –¥–∞–Ω–Ω—ã–º–∏ —Å–∏–≥–Ω–∞–ª–∞

    Returns:
        (is_valid, panic_signal, error_message)
    """
    try:
        signal = PanicSignal(**data)
        return True, signal, "–°–∏–≥–Ω–∞–ª –≤–∞–ª–∏–¥–µ–Ω"
    except Exception as e:
        logger.error(f"‚ùå –û—à–∏–±–∫–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏ —Å–∏–≥–Ω–∞–ª–∞: {e}")
        return False, None, f"–û—à–∏–±–∫–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏: {str(e)}"


def validate_ticker_data(data: Dict[str, Any]) -> Tuple[bool, Optional[TickerData], str]:
    """
    –í–∞–ª–∏–¥–∞—Ü–∏—è –¥–∞–Ω–Ω—ã—Ö —Ç–∏–∫–µ—Ä–∞

    Args:
        data: –°–ª–æ–≤–∞—Ä—å —Å –¥–∞–Ω–Ω—ã–º–∏ —Ç–∏–∫–µ—Ä–∞

    Returns:
        (is_valid, ticker_data, error_message)
    """
    try:
        ticker_data = TickerData(**data)

        # –î–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω–∞—è –ø—Ä–æ–≤–µ—Ä–∫–∞
        is_valid, message = ticker_data.validate_for_analysis()
        if not is_valid:
            return False, None, message

        return True, ticker_data, "–î–∞–Ω–Ω—ã–µ —Ç–∏–∫–µ—Ä–∞ –≤–∞–ª–∏–¥–Ω—ã"
    except Exception as e:
        logger.error(f"‚ùå –û—à–∏–±–∫–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏ –¥–∞–Ω–Ω—ã—Ö —Ç–∏–∫–µ—Ä–∞: {e}")
        return False, None, f"–û—à–∏–±–∫–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏: {str(e)}"